--- a/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/preambule_beamer.tex
+++ b/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/preambule_beamer.tex
@@ -111,7 +111,7 @@ anchor=base,text centered,text=white, font=\bfseries, align=center] % text width
 
 \usetheme[titleformat=smallcaps, subsectionpage=progressbar]{metropolis} % usetitleprogressbar, subsectionpage=progressbar
 % default, professionalfonts, serif, structurebold, structureitalicserif, structuresmallcapsserif
-\usefonttheme{professionalfonts}
+% \usefonttheme{professionalfonts}
 
 % \usetikzlibrary{calc,decorations.pathmorphing,decorations.pathreplacing}
 % \usetikzlibrary{calc,trees,positioning,arrows,chains,shapes.geometric,%
