--- a/Projetcs/01_Definition_Strategie_Apprentissage/projets.ipynb
+++ b/Projetcs/01_Definition_Strategie_Apprentissage/projets.ipynb
@@ -18,13 +18,13 @@
    "id": "81c88362",
    "metadata": {},
    "source": [
-    "# Import des packages et chargemetn des données\n",
+    "# Import des packages et chargement des données\n",
     "Les données correspondent à un temps estimatif de travail des différents projets, plus un score de difficulté et de motivation (non utilisé pour le moment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "554d9098",
    "metadata": {},
    "outputs": [
@@ -170,14 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "ea7ce362",
    "metadata": {},
    "outputs": [],
    "source": [
     "for key in data.keys():\n",
-    "    if (data[key].dtype == 'int64') or ( not 'duree' in key) and ( not'temps' in key): continue ;\n",
-    "    data[key] = pd.to_numeric(data[key].str.replace('h',''), errors='coerce' ) ;\n",
+    "    if (data[key].dtype == 'int64') or ( not 'duree' in key) \\\n",
+    "        and ( not'temps' in key): continue ;\n",
+    "    data[key] = pd.to_numeric(data[key].str.replace('h',''),\n",
+    "        errors='coerce' ) ;\n",
     "# for #"
    ]
   },
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "418eb386",
    "metadata": {},
    "outputs": [
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "48e6f60b",
    "metadata": {},
    "outputs": [
@@ -481,8 +483,8 @@
     }
    ],
    "source": [
-    "data['temps total'] = data['duree'] + data['duree cours associes'] + data['temps ressourses additionneles'] ;\n",
-    "\n",
+    "data['temps total'] = data['duree'] + data['duree cours associes'] \\\n",
+    "     + data['temps ressourses additionneles'] ;\n",
     "display( data )        "
    ]
   },
@@ -492,16 +494,16 @@
    "id": "9f548ef4",
    "metadata": {},
    "source": [
-    "# Temps initial estimatif en heures sur 6 mois\n",
+    "# Temps initial estimatif en heures\n",
     "1. calcul du nombre de jours de janvier à juin inclu\n",
-    "1. calcul du nombre de semaine (entière)\n",
+    "1. calcul du nombre de semaines (entières)\n",
     "1. calcul du nombre d'heures à disposition sur une base de 35h/semaine\n",
-    "1. sum des heures des différents projets (estimation) et comparaison avec e nombre d'heures à disposition"
+    "1. sum des heures des différents projets (estimation) et comparaison avec le nombre d'heures à disposition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f9acf836",
    "metadata": {},
    "outputs": [
@@ -520,12 +522,17 @@
    ],
    "source": [
     "n_jours = np.sum( [31,28,31,30,31,30]) ;\n",
-    "n_sem = n_jours // 7 +2\n",
-    "n_jours_restant = n_jours - 7*n_sem\n",
-    "n_heures_dispo = 35 * n_sem\n",
+    "n_sem = n_jours // 7 +2 ;\n",
+    "n_jours_restant = n_jours - 7*n_sem ;\n",
+    "n_heures_dispo = 35 * n_sem ;\n",
     "heures_total_estim = data['temps total'].sum() ;\n",
-    "print('nombre de jours {:}\\nnombre de semaines {:}\\nnombre jours restants {:}\\nnombre heures disponibles {:}\\nnombre heures total estimatif {:}'.format( n_jours, n_sem, n_jours_restant, n_heures_dispo, heures_total_estim) ) ;\n",
-    "print('nombre heures manquantes {:}'.format( heures_total_estim - n_heures_dispo))"
+    "print( ('nombre de jours {:}\\nnombre de semaines ' +\n",
+    "        '{:}\\nnombre jours restants {:}\\nnombre heures disponibles '\n",
+    "        '{:}\\nnombre heures total estimatif {:}').format( \\\n",
+    "            n_jours, n_sem, n_jours_restant, n_heures_dispo,\\\n",
+    "            heures_total_estim) ) ;\n",
+    "n_heures_diff = heures_total_estim - n_heures_dispo ;\n",
+    "print('nombre heures manquantes {:}'.format( n_heures_diff) ) ;"
    ]
   },
   {
@@ -534,13 +541,12 @@
    "id": "442938c0",
    "metadata": {},
    "source": [
-    "# Estimation de la durée de chaque projet\n",
-    "arrondi et ceil"
+    "# Estimation de la durée de chaque projet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "5764cc0a",
    "metadata": {},
    "outputs": [
@@ -549,7 +555,7 @@
      "output_type": "stream",
      "text": [
       "n semaines initial (janvier à juin) : 27\n",
-      "n semaines ceil : 30.0\n"
+      "n semaines ceil : 30\n"
      ]
     },
     {
@@ -581,7 +587,6 @@
        "      <th>motivation</th>\n",
        "      <th>temps total</th>\n",
        "      <th>duree estimatif (semaines)</th>\n",
-       "      <th>duree estimatif ceil (semaines)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -594,8 +599,7 @@
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>125</td>\n",
-       "      <td>3.57</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -606,8 +610,7 @@
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>187</td>\n",
-       "      <td>5.34</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -618,8 +621,7 @@
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>115</td>\n",
-       "      <td>3.29</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -630,8 +632,7 @@
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>168</td>\n",
-       "      <td>4.80</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -642,8 +643,7 @@
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>200</td>\n",
-       "      <td>5.71</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -654,8 +654,7 @@
        "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>51</td>\n",
-       "      <td>1.46</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -666,8 +665,7 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>100</td>\n",
-       "      <td>2.86</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -692,14 +690,14 @@
        "5                              20           4           3           51   \n",
        "6                              50           3           2          100   \n",
        "\n",
-       "   duree estimatif (semaines)  duree estimatif ceil (semaines)  \n",
-       "0                        3.57                              4.0  \n",
-       "1                        5.34                              6.0  \n",
-       "2                        3.29                              4.0  \n",
-       "3                        4.80                              5.0  \n",
-       "4                        5.71                              6.0  \n",
-       "5                        1.46                              2.0  \n",
-       "6                        2.86                              3.0  "
+       "   duree estimatif (semaines)  \n",
+       "0                           4  \n",
+       "1                           6  \n",
+       "2                           4  \n",
+       "3                           5  \n",
+       "4                           6  \n",
+       "5                           2  \n",
+       "6                           3  "
       ]
      },
      "metadata": {},
@@ -707,10 +705,13 @@
     }
    ],
    "source": [
-    "data['duree estimatif (semaines)'] = np.round( data['temps total'] / 35 , 2 )\n",
-    "data['duree estimatif ceil (semaines)'] = np.ceil( data['temps total'] / 35 )\n",
+    "key = 'duree estimatif (semaines)' ;\n",
+    "data[key] = np.ceil( np.round( \\\n",
+    "                                data['temps total'] / 35 , 2 ) ) ;\n",
+    "data[key] = data[key].astype('int') ;                               \n",
     "print('n semaines initial (janvier à juin) : {:}'.format( n_sem ) )\n",
-    "print('n semaines ceil : {:}'.format( data['duree estimatif ceil (semaines)'].sum() ) )\n",
+    "print('n semaines ceil : {:}'.format( \\\n",
+    "    data[key].sum() ) ) ;\n",
     "display( data )"
    ]
   },
@@ -721,13 +722,13 @@
    "metadata": {},
    "source": [
     "# Estimation des dates de soutenance\n",
-    "1. Conversion des durées cumulées (semaines + ceil) en *timedelta*\n",
+    "1. Conversion des durées cumulées en *timedelta*\n",
     "1. Ajout à une date initiale le 02/01/2023"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "edd7ddb8",
    "metadata": {},
    "outputs": [
@@ -760,7 +761,6 @@
        "      <th>motivation</th>\n",
        "      <th>temps total</th>\n",
        "      <th>duree estimatif (semaines)</th>\n",
-       "      <th>duree estimatif ceil (semaines)</th>\n",
        "      <th>date soutenance (estimation)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -774,8 +774,7 @@
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>125</td>\n",
-       "      <td>3.57</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>2023-01-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -787,8 +786,7 @@
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>187</td>\n",
-       "      <td>5.34</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>6</td>\n",
        "      <td>2023-03-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -800,8 +798,7 @@
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>115</td>\n",
-       "      <td>3.29</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>2023-04-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -813,8 +810,7 @@
        "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>168</td>\n",
-       "      <td>4.80</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>2023-05-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -826,8 +822,7 @@
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>200</td>\n",
-       "      <td>5.71</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>6</td>\n",
        "      <td>2023-06-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -839,8 +834,7 @@
        "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>51</td>\n",
-       "      <td>1.46</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>2023-07-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -852,8 +846,7 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>100</td>\n",
-       "      <td>2.86</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>2023-07-31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -879,23 +872,14 @@
        "5                              20           4           3           51   \n",
        "6                              50           3           2          100   \n",
        "\n",
-       "   duree estimatif (semaines)  duree estimatif ceil (semaines)  \\\n",
-       "0                        3.57                              4.0   \n",
-       "1                        5.34                              6.0   \n",
-       "2                        3.29                              4.0   \n",
-       "3                        4.80                              5.0   \n",
-       "4                        5.71                              6.0   \n",
-       "5                        1.46                              2.0   \n",
-       "6                        2.86                              3.0   \n",
-       "\n",
-       "  date soutenance (estimation)  \n",
-       "0                   2023-01-30  \n",
-       "1                   2023-03-13  \n",
-       "2                   2023-04-10  \n",
-       "3                   2023-05-15  \n",
-       "4                   2023-06-26  \n",
-       "5                   2023-07-10  \n",
-       "6                   2023-07-31  "
+       "   duree estimatif (semaines) date soutenance (estimation)  \n",
+       "0                           4                   2023-01-30  \n",
+       "1                           6                   2023-03-13  \n",
+       "2                           4                   2023-04-10  \n",
+       "3                           5                   2023-05-15  \n",
+       "4                           6                   2023-06-26  \n",
+       "5                           2                   2023-07-10  \n",
+       "6                           3                   2023-07-31  "
       ]
      },
      "metadata": {},
@@ -903,7 +887,10 @@
     }
    ],
    "source": [
-    "data['date soutenance (estimation)'] = pd.to_datetime( '02/01/2023',format='%d/%m/%Y') + pd.to_timedelta( (7*data['duree estimatif ceil (semaines)'].cumsum()).astype(str) + ' days')\n",
+    "duree_cumsum = 7*data['duree estimatif (semaines)'].cumsum() ;\n",
+    "data['date soutenance (estimation)'] = \\\n",
+    "    pd.to_datetime( '02/01/2023',format='%d/%m/%Y') \\\n",
+    "    + pd.to_timedelta( duree_cumsum.astype(str) + ' days')\n",
     "display(data)"
    ]
   },
@@ -918,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "106d1eea",
    "metadata": {},
    "outputs": [
@@ -941,8 +928,8 @@
     "str_out = '' ;\n",
     "for i, date in enumerate( data['date soutenance (estimation)'].tolist() ):\n",
     "    date_str = date.strftime('%d/%m/%Y') ; \n",
-    "    # print('date:', date_str )\n",
-    "    str_out += '\\n-Projet {:}: {:}'.format( i+1, date_str )\n",
+    "    str_out += '\\n-Projet {:}: {:}'.format( i+1, date_str ) ;\n",
+    "# for i, date #\n",
     "print(str_out)"
    ]
   },
