--- a/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/preambule_beamer.tex
+++ b/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/preambule_beamer.tex
@@ -46,6 +46,10 @@
 \tikzstyle{medium} = [ellipse, draw, thin, fill=green!20, minimum height=2.5em]
 
 
+\tikzstyle{box_style0}=[draw, rounded corners ,
+anchor=base,text centered,text=white, font=\bfseries] % text width=33mm,
+
+\tikzstyle{box_style}=[box_style0, fill=black!80] % text width=33mm,
 
 % \tikzstyle{bStyle}=[draw, rounded corners , fill=black!80,
 % anchor=base, text centered,text=white, text width=2.8cm,font = 33]
@@ -60,8 +64,8 @@ anchor=base,text centered,text=white, font=\bfseries] % text width=33mm,
 \tikzstyle{bStyle3}=[draw, rounded corners , fill=r1,
 anchor=base,text centered,text=white, font=\bfseries, align=center] % text width=33mm,
 
-\tikzstyle{myarrow}=[->, >=open triangle 90, very thick]
-\tikzstyle{myarrow2}=[->, >=stealth, very thick]
+\tikzstyle{myarrow0}=[->, >=open triangle 90, very thick]
+\tikzstyle{myarrow}=[->, >=stealth, very thick]
 \tikzstyle{line}=[thick]
 
 
