--- a/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/preambule_beamer.tex
+++ b/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/preambule_beamer.tex
@@ -36,7 +36,7 @@
 %\usepackage[active,tightpage]{preview}
 % \usepackage{times}
 \usepackage{tikz}
-\usetikzlibrary{shapes,arrows,shadows,calc}
+\usetikzlibrary{shapes,arrows,shadows,calc, angles}
 \usetikzlibrary{arrows,shapes}
 \usetikzlibrary{positioning}
 
@@ -47,7 +47,7 @@
 
 
 \tikzstyle{box_style0}=[draw, rounded corners ,
-anchor=base,text centered,text=white, font=\bfseries] % text width=33mm,
+anchor=center,text centered,text=white, font=\bfseries] % text width=33mm,
 
 \tikzstyle{box_style}=[box_style0, fill=black!80] % text width=33mm,
 
