--- a/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/ppt.tex
+++ b/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/ppt.tex
@@ -18,7 +18,7 @@
 \graphicspath{{Figures/} {Figures/Logos/}}
 % \graphicspath{{../Figures/} {../Figures/Logos/}}
 
-\title[]{\vspace{22mm}Formation Ingénieur Machine Learning\\\vspace{6mm}Projet: Définissez votre stratégie d'apprentissage}
+\title[]{\vspace{22mm}Formation \alert{Ingénieur Machine Learning}\\\vspace{6mm}Projet: Définissez votre \alert{stratégie d'apprentissage}}
 \date[]{5 Janvier 2023\\\vspace{18mm}\\\tit{thomas.durandtexte@protonmail.com}}
 
 
@@ -47,22 +47,24 @@
 
 
 
+\def\Rfive{30mm}
+\def\RelemFive{10mm}
+\definecolor{clrE1}{rgb}{1,0.7,0}
+\definecolor{clrE2}{rgb}{1,0.6375,0}
+\definecolor{clrE3}{rgb}{1,0.575,0}
+\definecolor{clrE4}{rgb}{1,0.5125,0}
+\definecolor{clrE5}{rgb}{1,0.45,0}
+
+
+% \tikzstyle{circle_Five}=[anchor=center,draw,circle, minimum width=\RelemFive, minimum height=\RelemFive, font=\bfseries, text width=2*\RelemFive, text height=2*\RelemFive, text centered]
+\tikzstyle{circle_Five}=[anchor=center, font=\bfseries, text width=2*\RelemFive, text centered]
+
 \begin{document}
 % ------------------------------------------- %
 
-\begin{frame}
-	\titlepage
-
-	% \vspace{-6mm}
-	% \begin{center}
-	% 	\begin{tabular}{>{\centering}m{20mm}>{\centering}m{12mm}>{\centering}m{24mm}>{\centering}m{30mm}}
-	% 		\includegraphics[width=20mm]{LogoInst_LAUM.png} &
-	% 		\includegraphics[height=10mm]{logoCNRS.jpeg} &
-	% 		\includegraphics[height=6mm]{1280px-Logo_Univ_du_Maine.png} &
-	% 		\includegraphics[height=10mm]{FullFields_Logo+baseline2.png}
-	% 	\end{tabular}
-	% \end{center}
-\end{frame}
+% \begin{frame}
+% 	\titlepage{}
+% \end{frame}
 
 
 
@@ -76,139 +78,235 @@
 
 
 % ------------------------------------------- %
-\section{Mon parcours}
+\section{Mon \alert{parcours}}
+
+% \begin{frame}[t]
+% 	\vspace{2mm}
+% 	\begin{tikzpicture}
+% 		\draw[black] (-0.5\textwidth,-0.8\textheight) rectangle (0.5\textwidth,0.25\textheight) ;
+% 		\only<-10>{
+% 		\begin{scope}[xshift=10mm]
+% 			\node[box_style] (Inge) at (-20mm,0) {{Diplôme ingénieur}} ;
+% 			\visible<2->{
+% 			\node[box_style] (IMDEA) at (20mm,0) {Master international} ;
+% 			\only<-9>{\draw[myarrow] (Inge.north) to [out=80, in=100] (IMDEA.north) ; }
+% 			\only<10>{\draw[myarrow, myOrng] (Inge.north) to [out=80, in=100] (IMDEA.north) ; }
+% 			}
+% 			\visible<3->{
+% 			\node[box_style] (phd) at (0mm,-28mm) {Thèse} ;
+% 			\only<-9>{\draw[myarrow] (IMDEA.south) to [out=-80, in=90] (phd.north) ;}
+% 			\only<10>{\draw[myarrow, myOrng] (IMDEA.south) to [out=-80, in=90] (phd.north) ;}
+% 			}
+% 			\visible<8->{
+% 			\node[box_style, text width=21mm] (postdoc) at (0mm,-40mm) {{4 ans recherche\\\vspace{-1mm}post-doctorale}} ;
+% 			\only<-9>{\draw[myarrow] (phd.south) -- (postdoc.north) ;}
+% 			\only<10>{\draw[myarrow, myOrng] (phd.south) -- (postdoc.north) ;}
+% 			}
+% 			\visible<9->{
+% 			\node (OC) at (0mm,-55mm) {\includegraphics[width=8mm]{Logo_OpenClassrooms.png}} ;
+% 			}
+% 		\end{scope}
+% 		}
+
+% 		\visible<1-9>{
+% 		\visible<8->{
+% 			\node[draw, rounded corners , anchor=base,text centered, orange, text width=16mm] at (35mm, -32mm) {\color{white}\tiny{Imagerie\\\vspace{-1mm}infra-rouge\\Amortissement\\\vspace{-1mm}vibratoire\\Céramiques\\\vspace{-3mm}électro-caloriques}} ;
+% 			% \node[box_style, text width=20mm] at (30mm, -35mm) {\tiny{Amortissement\\\vspace{-3mm}vibratoire}} ;
+% 		}
+
+% 		\visible<9->{
+% 			\node at (25mm, -55mm) {\includegraphics[width=15mm]{divers/Machine-Learning.pdf}} ;
+% 		}
+
+% 		\visible<6>{
+% 			\node at (-22mm,-35mm) {
+% 			\def\arraystretch{0.1}%  1 is the default, change whatever you need
+% 				\begin{tabular}{cc}
+% 					{\includegraphics[width=27mm]{Plate/DS_n/1.pdf}}%
+% 					&
+% 					{\includegraphics[width=27mm]{Plate/DS_n/3.pdf}}%
+% 					\tabularnewline
+% 					{\includegraphics[width=27mm]{Plate/DS_n/5.pdf}}%
+% 					&
+% 					{\includegraphics[width=27mm]{Plate/DS_n/8.pdf}}%
+% 				\end{tabular}
+% 			} ;
+% 		}
+% 		\visible<5>{
+% 			\node at (-20mm, -50mm) {\includegraphics[width=60mm]{Plate/estimated_FRF.pdf}} ;
+% 		}
+% 		\visible<4>{
+% 		\node at (-20mm,-33mm) {
+% 			\movie[width=35mm]{\includegraphics[width=35mm]{Plate/Movie_plate.pdf}}{Movie_plate.mp4}
+% 		};
+% 		}
+% 		\visible<3,7->{
+% 			\node at (-25mm, -35mm) { \includegraphics[width=55mm]{triangulation.pdf} } ;
+% 		}
+	
+% 		\node at (-30mm, 13mm) { \movie[loop,width=30mm]{\includegraphics[width=30mm]{vib/Mass_Spring_dark-0.png}}{mass_spring.mp4} } ;
+% 		\visible<2->{
+% 			\node at (40mm,-12.5mm) {\includegraphics[width=15mm]{electroac/loudspeaker.pdf}} ;
+% 		}
+
+% 	}
+% 	\end{tikzpicture}
+% \end{frame}
+
+% % \begin{frame}
+% % 	\begin{overlayarea}{\textwidth}{\textheight}
+
+% % 		\vspace{6mm}
+% % 	\shdd{Parcours}
+% % 	\begin{itemize}
+% % 		\item[\shdng{0}{1}{2-}{$\bullet$}] \shdng{0}{1}{2-}{Ingénieur spécialisé Vibro-acoustique}
+% % 		\item[\shdng{-1}{2}{3-}{$\bullet$}] \shdng{-1}{2}{3-}{Master internationnal en Électro-Acoustique}
+% % 		\item[\shdng{-2}{3-7}{8-}{$\bullet$}] \shdng{-2}{3-7}{8-}{Doctorat~: mesure de vibrations par vision 3D}
+% % 		\item<8->[\shdng{-7}{8-}{0}{$\bullet$}] Recherche post-doctoral (4 ans)~:
+% % 		\only<9->{
+% % 		\begin{itemize}
+% % 			\item[$\bullet$] Imagerie infra-rouge appliqué à la dissipation vibratoire
+% % 			\item[$\bullet$] Création de modèles~: mécanique \& thermique (et couplage des 2)
+% % 			\item[$\bullet$] Étude de vibrations de céramiques
+% % 		\end{itemize}}
+% % 		\item<10>[$\bullet$] Recherche personnelle~?
+% % 	\end{itemize}
+
+% % 	\only<1>{
+% % 		\vspace*{-30mm}
+% % 		\hspace*{60mm}
+% % 		\movie[loop,width=40mm]{\includegraphics[width=40mm]{vib/Mass_Spring_dark-0.png}}{mass_spring.mp4}
+% % 	}
+
+% % 	\only<2>{
+% % 		\vspace*{-25mm}
+% % 		\hspace*{70mm}
+% % 		\includegraphics[width=20mm]{electroac/loudspeaker.pdf}
+% % 	}
+
+% % 	\vspace{3mm}
+% % 	\only<-3>{
+% % 		\visible<3>{
+% % 			\centering
+% % 			\includegraphics[width=70mm]{triangulation.pdf}
+% % 		}
+% % 	}
+% % 	\only<4>{
+% % 	\begin{figure}
+% % 		\centering
+% % 		\movie[width=70mm]{\includegraphics[width=70mm]{Plate/Movie_plate.pdf}}{Movie_plate.mp4}
+% % 	\end{figure}
+% %     }
+% % 	\only<5>{
+% % 		\centering
+% % 		\shdd{Estimation pour 1 point}\\
+% % 		\includegraphics[width=80mm]{Plate/estimated_FRF.pdf}
+% % 	}
+% % 	\only<6-7>{
+% % 		\centering
+% % 		\shdd{Estimation par mode}
+% % 		\begin{tabular}{cc}
+% % 			\only<6>{\includegraphics[width=60mm]{Plate/DS_n/1.pdf}}%
+% % 			\only<7>{\includegraphics[width=60mm]{Plate/DS_n/5.pdf}}%
+% % 			&
+% % 			\only<6>{\includegraphics[width=60mm]{Plate/DS_n/3.pdf}}%
+% % 			\only<7>{\includegraphics[width=60mm]{Plate/DS_n/8.pdf}}%
+% % 		\end{tabular}
+% % 	}
+
+% % 	\end{overlayarea}
+% % \end{frame}
+
+\section{{\alert{Pourquoi} une nouvelle formation~?\\Dans \alert{quel but}~?}}
+
+% \begin{frame}[t]
+% 	\vspace{0mm}
+% 	\begin{tikzpicture}
+% 		\draw[white] (0,0) rectangle (\textwidth,\textheight) ;
+% 		\only<1-5>{
+% 			\node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\fontsize{100pt}{20pt}\selectfont ?} ;
+% 			\node at (0.495\textwidth, 0.38\textheight) {\includegraphics[width=6mm]{Logo_OpenClassrooms.png}} ;
+% 		}
+% 		\only<6>{
+% 			\node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\includegraphics[width=10mm]{Logo_OpenClassrooms.png}} ;
+% 			\node[box_style0, text width=30mm] at (0.5\textwidth,0.2\textheight) {{Création micro-entreprise (freelance)}} ;
+% 		}
+% 		\visible<2->{
+% 			\node[box_style0, text width=30mm] at (0.5\textwidth,0.8\textheight) {Plaisir d'\alert{apprendre}} ;
+% 			\node[anchor=center] at (0.75\textwidth,0.8\textheight) {\includegraphics[height=16mm]{divers/brain.pdf}} ;
+% 		}
+% 		\visible<3->{
+% 			\node[box_style0, text width=30mm] at (0.2\textwidth,0.5\textheight) {Élargir mon champs de \alert{compétences}} ;
+% 			\node[anchor=center] at (0.12\textwidth,0.35\textheight) {\includegraphics[width=15mm]{divers/magnetfeld_einer_spule_02.pdf}} ;
+% 		}
+% 		\visible<4->{
+% 			\node[anchor=center] at (0.3\textwidth,0.35\textheight) {\includegraphics[width=15mm]{divers/Prismatic-Cloud-Gears-2.pdf}} ;
+% 		}
+% 		\visible<5->{
+% 			\node[box_style0, text width=30mm] at (0.8\textwidth,0.5\textheight) {{Accéder à\\\vspace{0mm}de nouvelles \alert{opportunités}}} ;
+% 			\node[anchor=center] at (0.8\textwidth,0.35\textheight) { \color{red} image ? } ;
+% 		}
+% 	\end{tikzpicture}
+% \end{frame}
 
 
-% \subsection{Simulations}
 
+\section{Pourquoi OpenClassrooms~?}
 
 \begin{frame}[t]
-	\vspace{3mm}
-	\shdd{Parcours}
-	
-	\begin{center}
-		
-		\begin{tikzpicture}
-			\node[box_style] (Inge) at (0,0) {{Diplôme ingénieur}} ;
-			\node[box_style] (IMDEA) at (40mm,0) {Master internationnal} ;
-			\draw[myarrow] (Inge.north) to [out=50, in=130] (IMDEA.north) ;
-			\node[box_style] (phd) at (20mm,-28mm) {Thèse} ;
-			\draw[myarrow] (IMDEA.south) to [out=-80, in=90] (phd.north) ;
-			\node[box_style, text width=21mm] (postdoc) at (20mm,-40mm) {{4 ans recherche\\\vspace{-1mm}post-doctorale}} ;
-			\draw[myarrow] (phd.south) -- (postdoc.north) ;
+	\vspace{0mm}
+	\begin{tikzpicture}
+		\draw[white] (0,0) rectangle (\textwidth,\textheight) ;
+		\begin{scope}[xshift=0.5\textwidth, yshift=0.5\textheight]
+			\node[anchor=center] at (0, 0) {\includegraphics[width=10mm]{Logo_OpenClassrooms.png}} ;
 			
-			\node (OC) at (20mm,-55mm) {\includegraphics[width=8mm]{Logo_OpenClassrooms.png}} ;
+			\draw (90:\Rfive) node (E1) {} ;
+			\draw (90-360/5:\Rfive) node (E2) {} ; 
+			\draw (90-2*360/5:\Rfive) node (E3) {} ;
+			\draw (90-3*360/5:\Rfive) node (E4) {} ; 
+			\draw (90-4*360/5:\Rfive) node (E5) {} ; 
 
-			\node at (-20mm,-30mm) {
-				\movie[height=50mm]{\includegraphics[width=50mm, angle=90]{Plate/Movie_plate.pdf}}{Movie_plate.mp4}
-			};
-		\end{tikzpicture}
-	\end{center}
+			
+			\visible<2->{\draw[myarrow] (E1.center) arc (90:90-50:\Rfive ) ;}
+			\visible<3->{\draw[myarrow] (E2.center) arc (90-360/5:90-360/5-50:\Rfive ) ;}
+			\visible<4->{\draw[myarrow] (E3.center) arc (90-2*360/5:90-2*360/5-50:\Rfive ) ;}
+			\visible<5->{\draw[myarrow] (E4.center) arc (90-3*360/5:90-3*360/5-50:\Rfive ) ;}
+			\visible<6->{\draw[myarrow] (E5.center) arc (90-4*360/5:90-4*360/5-50:\Rfive ) ;}
+			
+			\filldraw[fill=clrE1,clrE1] (E1.center) circle (\RelemFive) ;
+			\node[circle_Five, text=black] at (E1.center) {Reconnue} ; 
+			
+			
+			\visible<2->{
+			\filldraw[fill=clrE2,clrE2] (E2.center) circle (\RelemFive) ;
+			\node[circle_Five, text=black] at (E2.center) {{Mentorat 45~mins/sem.}} ; 
+			}
+			
+			\visible<3->{
+			\filldraw[fill=clrE3,clrE3] (E3.center) circle (\RelemFive) ;
+			\node[circle_Five,text=black] at (E3.center) {Accès à une commaunauté} ; 
+			\node at (35mm,-35mm) {\includegraphics[width=20mm]{Slack_logo_white.pdf}} ; 
+			}
+
+			\visible<4->{
+			\filldraw[fill=clrE4,clrE4] (E4.center) circle (\RelemFive) ;
+			\node[circle_Five,text=black] at (E4.center) {En distanciel} ;
+			\node at (-40mm,-30mm) {\includegraphics[width=20mm]{divers/icon-computer.pdf}} ; 
+			}
+			
+			\visible<5->{
+				\filldraw[fill=clrE5,clrE5] (E5.center) circle (\RelemFive) ;
+				\node[circle_Five,text=black] at (E5.center) {{Apprentissage par projets}} ; 
+				\node at (-40mm,30mm) {\includegraphics[width=20mm]{divers/project-time.pdf}} ; 
+			}
+		\end{scope}
+	\end{tikzpicture}
 \end{frame}
-	
-
-\begin{frame}
-	\begin{overlayarea}{\textwidth}{\textheight}
-
-		\vspace{6mm}
-	\shdd{Parcours}
-	\begin{itemize}
-		\item[\shdng{0}{1}{2-}{$\bullet$}] \shdng{0}{1}{2-}{Ingénieur spécialisé Vibro-acoustique}
-		\item[\shdng{-1}{2}{3-}{$\bullet$}] \shdng{-1}{2}{3-}{Master internationnal en Électro-Acoustique}
-		\item[\shdng{-2}{3-7}{8-}{$\bullet$}] \shdng{-2}{3-7}{8-}{Doctorat : mesure de vibrations par vision 3D}
-		\item<8->[\shdng{-7}{8-}{0}{$\bullet$}] Recherche post-doctoral (4 ans) :
-		\only<9->{
-		\begin{itemize}
-			\item[$\bullet$] Imagerie infra-rouge appliqué à la dissipation vibratoire
-			\item[$\bullet$] Création de modèles : mécanique \& thermique (et couplage des 2)
-			\item[$\bullet$] Étude de vibrations de céramiques
-		\end{itemize}}
-		\item<10>[$\bullet$] Recherche personnelle ?
-	\end{itemize}
-
-	\only<1>{
-		\vspace*{-30mm}
-		\hspace*{60mm}
-		\movie[loop,width=40mm]{\includegraphics[width=40mm]{vib/Mass_Spring_dark-0.png}}{mass_spring.mp4}
-	}
-
-	\only<2>{
-		\vspace*{-25mm}
-		\hspace*{70mm}
-		\includegraphics[width=20mm]{electroac/loudspeaker.pdf}
-	}
-
-	\vspace{3mm}
-	\only<-3>{
-		\visible<3>{
-			\centering
-			\includegraphics[width=70mm]{triangulation.pdf}
-		}
-	}
-	\only<4>{
-	\begin{figure}
-		\centering
-		\movie[width=70mm]{\includegraphics[width=70mm]{Plate/Movie_plate.pdf}}{Movie_plate.mp4}
-	\end{figure}
-    }
-	\only<5>{
-		\centering
-		\shdd{Estimation pour 1 point}\\
-		\includegraphics[width=80mm]{Plate/estimated_FRF.pdf}
-	}
-	\only<6-7>{
-		\centering
-		\shdd{Estimation par mode}
-		\begin{tabular}{cc}
-			\only<6>{\includegraphics[width=60mm]{Plate/DS_n/1.pdf}}%
-			\only<7>{\includegraphics[width=60mm]{Plate/DS_n/5.pdf}}%
-			&
-			\only<6>{\includegraphics[width=60mm]{Plate/DS_n/3.pdf}}%
-			\only<7>{\includegraphics[width=60mm]{Plate/DS_n/8.pdf}}%
-		\end{tabular}
-	}
-
-	\end{overlayarea}
-\end{frame}
-
-\section{Pourquoi une nouvelle formation ?}
-
-\begin{frame}[t]
-	\vspace{6mm}
-	\shdd{Une nouvelle formation pour :}
-	\begin{itemize}
-		\item[\shdng{0}{1}{2-}{$\bullet$}] \shdng{0}{1}{2-}{Le plaisir d'apprendre}
-		\item[\shdng{-1}{2}{3-}{$\bullet$}] \shdng{-1}{2}{3-}{Élargir mon champs de compétence}
-		\item[\shdng{-2}{3}{4-}{$\bullet$}] \shdng{-2}{3}{4-}{Pouvoir accéder à plus d'applications}
-	\end{itemize}
-
-	\vspace*{-25mm}
-	\hspace*{50mm}
-	\includegraphics[width=20mm]{divers/brain.pdf}
-
-		\visible<2->{
-	\vspace*{-8mm}
-	\hspace*{70mm}
-	\includegraphics[width=20mm]{divers/Prismatic-Cloud-Gears-2.pdf}
-	}
-
-	\vspace{7mm}
-	\visible<4>{
-	Objectif après la formation :\\
-	\begin{center}
-		\Huge Créer une micro-entreprise (freelance)
-	\end{center}
-	}
-	\vspace{7mm}
-\end{frame}
-
-
-\section{Pourquoi OpenClassrooms ?}
 
 \begin{frame}[t]
 	\vspace{18mm}
 
-	\shdd{Une formation OpenClassrooms c'est :}
+	\shdd{Une formation OpenClassrooms c'est~:}
 	\begin{itemize}
 		\item[\shdng{0}{1}{2-}{$\bullet$}] \shdng{0}{1}{2-}{45 minutes / semaine de mentorat avec un professionnel}
 		\item[\shdng{-1}{2}{3-}{$\bullet$}] \shdng{-1}{2}{3-}{En distanciel (souplesse)}
@@ -240,152 +338,205 @@
 	
 \end{frame}
 
+\begin{frame}[t]
+	\vspace{0mm}
+	\begin{tikzpicture}
+		\draw[black] (0,0) rectangle (\textwidth,\textheight) ; 
+		\node[box_style0, text width=30mm] at (0.2\textwidth, 0.8\textheight) {{\alert{Mentorat}\\\vspace{-1mm}45mins / semaine}} ;
+		\node[red] at (0.6\textwidth,0.5\textheight) {image Professionnel ?} ;
 
+		\visible<2->{
+		\node[box_style0, text width=30mm] at (0.2\textwidth, 0.7\textheight) {{En \alert{distanciel}\\\vspace{-1mm}}(souplesse)} ;
+		\node at (0.6\textwidth, 0.75\textheight) { \includegraphics[width=20mm]{divers/icon-computer.pdf} } ;
+		}
+
+		\visible<3->{
+		\node[box_style0, text width=30mm] at (0.2\textwidth, 0.6\textheight) {{Accès à\\\vspace{-1mm}}une \alert{communauté}} ;
+		\node at (0.6\textwidth, 0.6\textheight) { \includegraphics[width=20mm]{Slack_logo_white.pdf} } ;
+		}
+		
+		\visible<4->{
+		\node[box_style0, text width=30mm] at (0.2\textwidth, 0.5\textheight) {{Apprentissage\\\vspace{-1mm}}par \alert{projets}} ;
+		\node at (0.6\textwidth, 0.3\textheight) { \includegraphics[width=25mm]{divers/project-time.pdf} } ;
+		}
+	\end{tikzpicture}	
+	
+\end{frame}
 
 
 \section{Les projets}
 
-\begin{frame}
-	\shdd{Les projets :}
-	\begin{itemize}
-		\item[\shdng{0}{1}{2-}{1.}] \shdng{0}{1}{2-}{Concevez une application au service de la santé publique\newline(Gestion de données incomplètes)}
-		\item[\shdng{-1}{2}{3-}{2.}] \shdng{-1}{2}{3-}{Anticipez les besoins en consommation de bâtiments\newline(Modèle d'apprentissage supervisé)}
-		\item[\shdng{-2}{3}{4-}{3.}] \shdng{-2}{3}{4-}{Segmentez des clients d'un site e-commerce\newline(Modèle d'apprentissage non supervisé)}
-		\item[\shdng{-3}{4}{5-}{4.}] \shdng{-3}{4}{5-}{Catégorisez automatiquement des questions\newline(Gestion de données non structurées \& extraction de features)}
-		\item[\shdng{-4}{5}{6-}{5.}] \shdng{-4}{5}{6-}{Classez des images à l'aide d'algorithmes de Deep Learning\newline(Gestion d'images \& Deep Learning)}
-		\item[\shdng{-5}{6}{7-}{6.}] \shdng{-5}{6}{7-}{Développez une preuve de concept\newline(Veille technologique \& preuve de concept)}
-		\item[\shdng{-6}{7}{0}{7.}] \shdng{-6}{7}{0}{Participez à une compétition Kaggle !\newline(Mise en pratique, gestion \& communication de projet de développement)}
-	\end{itemize}
-\end{frame}
+% \begin{frame}
+% 	\shdd{Les projets~:}
+% 	\begin{itemize}
+% 		\item[\shdng{0}{1}{2-}{1.}] \shdng{0}{1}{2-}{Concevez une application au service de la santé publique\newline(Gestion de données incomplètes)}
+% 		\item[\shdng{-1}{2}{3-}{2.}] \shdng{-1}{2}{3-}{Anticipez les besoins en consommation de bâtiments\newline(Modèle d'apprentissage supervisé)}
+% 		\item[\shdng{-2}{3}{4-}{3.}] \shdng{-2}{3}{4-}{Segmentez des clients d'un site e-commerce\newline(Modèle d'apprentissage non supervisé)}
+% 		\item[\shdng{-3}{4}{5-}{4.}] \shdng{-3}{4}{5-}{Catégorisez automatiquement des questions\newline(Gestion de données non structurées \& extraction de features)}
+% 		\item[\shdng{-4}{5}{6-}{5.}] \shdng{-4}{5}{6-}{Classez des images à l'aide d'algorithmes de Deep Learning\newline(Gestion d'images \& Deep Learning)}
+% 		\item[\shdng{-5}{6}{7-}{6.}] \shdng{-5}{6}{7-}{Développez une preuve de concept\newline(Veille technologique \& preuve de concept)}
+% 		\item[\shdng{-6}{7}{0}{7.}] \shdng{-6}{7}{0}{Participez à une compétition Kaggle !\newline(Mise en pratique, gestion \& communication de projet de développement)}
+% 	\end{itemize}
+% \end{frame}
 
-\begin{frame}
-	\shdd{Les projets  les plus \alert{motivants} :}
+% \subsection{Les plus motivants}
+% \begin{frame}
+% 	\shdd{Les projets  les plus \alert{motivants}~:}
 	
-	\vspace{6mm}
-	\def\arraystretch{2}%  1 is the default, change whatever you need
-	\begin{tabular}{>{\centering}m{50mm}c>{\centering}m{40mm}}
-		\shdng{0}{1}{2-}{Concevez une application au service de la santé publique}
-		&
-		\shdng{0}{1}{2-}{\Huge $\rightarrow$}
-		&
-		\shdng{0}{1}{2-}{alimentation, prie en main des outils}
-		\tabularnewline
-		\shdng{-1}{2}{3-}{Anticipez les besoins en consommation de bâtiments}
-		&
-		\shdng{-1}{2}{3-}{\Huge $\rightarrow$}
-		&
-		\shdng{-1}{2}{3-}{modélisation, énergie}
-		\tabularnewline
-		\shdng{-2}{3}{0}{Classez des images à l'aide d'algorithmes de Deep Learning}
-		&
-		\shdng{-2}{3}{0}{\Huge $\rightarrow$}
-		&
-		\shdng{-2}{3}{0}{traitement d'images, (Deep learning?)}
-	\end{tabular}
-\end{frame}
+% 	\vspace{6mm}
+% 	\def\arraystretch{2}%  1 is the default, change whatever you need
+% 	\begin{tabular}{>{\centering}m{50mm}c>{\centering}m{40mm}}
+% 		\shdng{0}{1}{2-}{Concevez une application au service de la santé publique}
+% 		&
+% 		\shdng{0}{1}{2-}{\Huge $\rightarrow$}
+% 		&
+% 		\shdng{0}{1}{2-}{alimentation, prie en main des outils}
+% 		\tabularnewline
+% 		\shdng{-1}{2}{3-}{Anticipez les besoins en consommation de bâtiments}
+% 		&
+% 		\shdng{-1}{2}{3-}{\Huge $\rightarrow$}
+% 		&
+% 		\shdng{-1}{2}{3-}{modélisation, énergie}
+% 		\tabularnewline
+% 		\shdng{-2}{3}{0}{Classez des images à l'aide d'algorithmes de Deep Learning}
+% 		&
+% 		\shdng{-2}{3}{0}{\Huge $\rightarrow$}
+% 		&
+% 		\shdng{-2}{3}{0}{traitement d'images, (Deep learning?)}
+% 	\end{tabular}
+% \end{frame}
 
+% \subsection{Les plus difficiles à priori}
 
-\begin{frame}
-	\shdd{Les projets  les plus \alert{difficiles} à priori :}
+% \begin{frame}
+% 	\shdd{Les projets  les plus \alert{difficiles} à priori~:}
 	
-	\vspace{6mm}
-	\def\arraystretch{2}%  1 is the default, change whatever you need
-	\begin{tabular}{>{\centering}m{50mm}c>{\centering}m{40mm}}
-		\shdng{0}{1}{2-}{Segmentez des clients d'un site e-commerce}
-		&
-		\shdng{0}{1}{2-}{\Huge $\rightarrow$}
-		&
-		\shdng{0}{1}{2-}{plus éloigné de mes compétences}
-		\tabularnewline
-		\shdng{-1}{2}{3-}{Catégorisez automatiquement des questions}
-		&
-		\shdng{-1}{2}{3-}{\Huge $\rightarrow$}
-		&
-		\shdng{-1}{2}{3-}{plus éloigné de mes compétences}
-		\tabularnewline
-		\shdng{-2}{3}{0}{Participez à une compétition Kaggle !}
-		&
-		\shdng{-2}{3}{0}{\Huge $\rightarrow$}
-		&
-		\shdng{-2}{3}{0}{compétition}
-	\end{tabular}
-\end{frame}
+% 	\vspace{6mm}
+% 	\def\arraystretch{2}%  1 is the default, change whatever you need
+% 	\begin{tabular}{>{\centering}m{50mm}c>{\centering}m{40mm}}
+% 		\shdng{0}{1}{2-}{Segmentez des clients d'un site e-commerce}
+% 		&
+% 		\shdng{0}{1}{2-}{\Huge $\rightarrow$}
+% 		&
+% 		\shdng{0}{1}{2-}{plus éloigné de mes compétences}
+% 		\tabularnewline
+% 		\shdng{-1}{2}{3-}{Catégorisez automatiquement des questions}
+% 		&
+% 		\shdng{-1}{2}{3-}{\Huge $\rightarrow$}
+% 		&
+% 		\shdng{-1}{2}{3-}{plus éloigné de mes compétences}
+% 		\tabularnewline
+% 		\shdng{-2}{3}{0}{Participez à une compétition Kaggle !}
+% 		&
+% 		\shdng{-2}{3}{0}{\Huge $\rightarrow$}
+% 		&
+% 		\shdng{-2}{3}{0}{compétition}
+% 	\end{tabular}
+% \end{frame}
 
+% \subsection{Plannification}
+% \begin{frame}[t]
+% 	\vspace{3mm}
+% 	\shdd{Dates prévisionnelles de soutenances~:}
 
-\begin{frame}[t]
-	\vspace{3mm}
-	\shdd{Dates prévisionnelles de soutenances :}
+% 	\vfill
+% 	\only<1>{\includegraphics[width=110mm]{dates/cell-1.jpg}}%
+% 	% \only<2>{\includegraphics[width=110mm]{dates/cell-1_out.png}}%
+% 	\only<2>{\includegraphics[width=110mm]{dates/cell-2.jpg}}%
+% 	\only<3>{\includegraphics[width=110mm]{dates/cell-3.jpg}}%
+% 	\only<4>{\includegraphics[width=110mm]{dates/cell-4.jpg}}%
+% 	\only<5>{\includegraphics[width=110mm]{dates/cell-5.jpg}}%
+% 	\only<6>{\includegraphics[width=110mm]{dates/cell-6.jpg}}%
+% 	\only<7>{\includegraphics[width=110mm]{dates/cell-7.jpg}}%
+% 	% \only<9>{\includegraphics[width=110mm]{dates/cell-6.png}}%
+% 	% \only<10>{\includegraphics[width=110mm]{dates/cell-6_out.png}}%
+% 	% \only<11>{\includegraphics[width=110mm]{dates/cell-7.png}}%
+% 	\vfill
 
-	\vfill
-	\only<1>{\includegraphics[width=110mm]{dates/cell-1.jpg}}%
-	% \only<2>{\includegraphics[width=110mm]{dates/cell-1_out.png}}%
-	\only<2>{\includegraphics[width=110mm]{dates/cell-2.jpg}}%
-	\only<3>{\includegraphics[width=110mm]{dates/cell-3.jpg}}%
-	\only<4>{\includegraphics[width=110mm]{dates/cell-4.jpg}}%
-	\only<5>{\includegraphics[width=110mm]{dates/cell-5.jpg}}%
-	\only<6>{\includegraphics[width=110mm]{dates/cell-6.jpg}}%
-	\only<7>{\includegraphics[width=110mm]{dates/cell-7.jpg}}%
-	% \only<9>{\includegraphics[width=110mm]{dates/cell-6.png}}%
-	% \only<10>{\includegraphics[width=110mm]{dates/cell-6_out.png}}%
-	% \only<11>{\includegraphics[width=110mm]{dates/cell-7.png}}%
-	\vfill
-
-\end{frame}
+% \end{frame}
 
 \section{Quelques bonnes pratiques}
 
-\begin{frame}
-	- Utiliser un calendrier et noter les date butoires de fin de projets
-	- Utiliser la technique POMODORO (pour limiter la fatigue)
-	- Bien préparer les sessions de mentorat, notamment en tenant à jour une liste de questions
-	- Ne pas rester bloqué sur un point du projet en cours, avancer sur d'autres points non bloquants en attendant la prochaine session de mantorat / poser des questions à d'autres étudiants via la plateforme SLACK
-\end{frame}
+% \begin{frame}
+% 	\vspace{0mm}
+% 	\begin{tikzpicture}
+% 		\draw[white] (0,0) rectangle (\textwidth,\textheight) ;
+
+% 		\node[box_style0, text width=40mm] at (0.3\textwidth,0.8\textheight) {{Calendrier\\\vspace{-1mm}dates des jalons}} ;
+% 		\node[draw,red, text width=30mm] at (0.7\textwidth, 0.8\textheight) {{Aide à l'organisation}} ;
+
+% 		\node[box_style0, text width=40mm] at (0.3\textwidth,0.7\textheight) {{Technique POMODORO\\\vspace{0mm}}} ;
+% 		\node[draw,red, text width=30mm] at (0.7\textwidth, 0.7\textheight) {{limiter fatigue\\optimiser efficacité}} ;
+		
+
+% 		\node[box_style0, text width=40mm] at (0.3\textwidth,0.6\textheight) {{Préparation\\\vspace{-1mm}sessions mentorat} } ;
+% 		\node[draw,red, text width=30mm] at (0.7\textwidth, 0.6\textheight) {{profiter au mieux de l'expérience du mentor}} ;
+		
+
+% 		\node[box_style0, text width=40mm] at (0.3\textwidth,0.4\textheight) {{Éviter de rester bloqué\\\vspace{-1mm}(focalisé) sur un point} } ;
+% 		\node[draw,red, text width=30mm] at (0.7\textwidth, 0.4\textheight) {{gif robot sur mur ?\\image autre ?}} ;
+
+% 	\end{tikzpicture}
+
+% \end{frame}
 
 
 
 
 \section{Outils collaboratifs}
 
-\begin{frame}
-	- GitHub
-	- Mails
-	- Plateform OPENCLASSROOMS
-	- Discord
+% \begin{frame}[t]
+% 	\vspace{0mm}
+% 	\begin{tikzpicture}
+% 		\draw[white] (0,0) rectangle (\textwidth,\textheight) ;
 
-	\only<1>{ \vspace*{0mm} \includegraphics[width=100mm]{GitHub.png}}
+% 		\node[box_style0] at (0.3\textwidth,0.8\textheight) {GitHub \textcolor{red}{logo~?}} ;
+% 		\visible<1>{
+% 			\node at (0.7\textwidth,0.7\textheight) {\includegraphics[width=0.5\textwidth]{GitHub.png}} ;
+% 		} ;
 
-\end{frame}
+% 		\node[box_style0] at (0.3\textwidth,0.7\textheight) {Mails \textcolor{red}{Icone}} ;
+		
+		
+% 		\node[box_style0] at (0.3\textwidth,0.6\textheight) {Plateforme OpenClassrooms} ;
+% 		\node at (0.6\textwidth,0.6\textheight) {\includegraphics[width=10mm]{Logo_OpenClassrooms.png}} ;
+		
+% 		\node[box_style0] at (0.3\textwidth,0.5\textheight) {Discord \textcolor{red}{À mettre ?}} ;
+
+% 	\end{tikzpicture}
+
+% \end{frame}
 
 
 
 
-\begin{frame}[t]
-	\vspace{18mm}
-	\begin{center}
-		\Large Merci pour votre attention.
-	\end{center}
+% \begin{frame}[t]
+% 	\vspace{18mm}
+% 	\begin{center}
+% 		\Large Merci pour votre attention.
+% 	\end{center}
 
-	\vfill
-	{\tiny
-	\begin{center}
-		\alert{Artworks}\\ \vspace{-2mm}
-		\alert{\rule{40mm}{0.1mm}}
-	\end{center}
+% 	\vfill
+% 	{\tiny
+% 	\begin{center}
+% 		\alert{Artworks}\\ \vspace{-2mm}
+% 		\alert{\rule{40mm}{0.1mm}}
+% 	\end{center}
 
-	commons.wikimedia : 
-	\begin{itemize}
-		\item[$\bullet$] Mass Spring System Resonance.gif by Guillermo Bossio 
-	\end{itemize}
-	openclipart.org : 
-	\begin{itemize}
-		\item[$\bullet$] loudspeaker by forestgreen
-		\item[$\bullet$] Prismatic Cloud Gears 2, Abstract Brain Triangles Prismatic by GDJ
-		\item[$\bullet$] Time Project by lbear
-		\item[$\bullet$] Laptop Computer Icon by kael\_179
-	\end{itemize}
-	}
+% 	commons.wikimedia~: 
+% 	\begin{itemize}
+% 		\item[$\bullet$] Mass Spring System Resonance.gif by Guillermo Bossio 
+% 	\end{itemize}
+% 	openclipart.org~: 
+% 	\begin{itemize}
+% 		\item[$\bullet$] loudspeaker by forestgreen
+% 		\item[$\bullet$] Prismatic Cloud Gears 2, Abstract Brain Triangles Prismatic by GDJ
+% 		\item[$\bullet$] Time Project by lbear
+% 		\item[$\bullet$] Laptop Computer Icon by kael\_179
+% 	\end{itemize}
+% 	}
 
-\end{frame}
+% \end{frame}
 
 
 % ------------------------------------------- %
