--- a/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/preambule_beamer.tex
+++ b/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/preambule_beamer.tex
@@ -131,6 +131,8 @@ anchor=base,text centered,text=white, font=\bfseries, align=center] % text width
 \definecolor{r1}{rgb}{0.7,0,0}
 \definecolor{k1}{rgb}{0.2,0.2,0.2}
 
+\definecolor{violetOC}{rgb}{0.455,0.318,0.922}
+
 
 \definecolor{myCyan}{rgb}{0,0.8,0.99}
 \definecolor{mygreen}{rgb}{0,0.35,0}
