--- a/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/ppt.tex
+++ b/Projetcs/01_Definition_Strategie_Apprentissage/diaporama/ppt.tex
@@ -50,10 +50,10 @@
 \def\Rfive{30mm}
 \def\RelemFive{10mm}
 \definecolor{clrE1}{rgb}{1,0.7,0}
-\definecolor{clrE2}{rgb}{1,0.6375,0}
-\definecolor{clrE3}{rgb}{1,0.575,0}
-\definecolor{clrE4}{rgb}{1,0.5125,0}
-\definecolor{clrE5}{rgb}{1,0.45,0}
+\definecolor{clrE2}{rgb}{1,0.6,0}
+\definecolor{clrE3}{rgb}{1,0.5,0}
+\definecolor{clrE4}{rgb}{1,0.4,0}
+\definecolor{clrE5}{rgb}{1,0.3,0}
 
 
 % \tikzstyle{circle_Five}=[anchor=center,draw,circle, minimum width=\RelemFive, minimum height=\RelemFive, font=\bfseries, text width=2*\RelemFive, text height=2*\RelemFive, text centered]
@@ -62,9 +62,9 @@
 \begin{document}
 % ------------------------------------------- %
 
-% \begin{frame}
-% 	\titlepage{}
-% \end{frame}
+\begin{frame}
+	\titlepage{}
+\end{frame}
 
 
 
@@ -80,174 +80,114 @@
 % ------------------------------------------- %
 \section{Mon \alert{parcours}}
 
-% \begin{frame}[t]
-% 	\vspace{2mm}
-% 	\begin{tikzpicture}
-% 		\draw[black] (-0.5\textwidth,-0.8\textheight) rectangle (0.5\textwidth,0.25\textheight) ;
-% 		\only<-10>{
-% 		\begin{scope}[xshift=10mm]
-% 			\node[box_style] (Inge) at (-20mm,0) {{Diplôme ingénieur}} ;
-% 			\visible<2->{
-% 			\node[box_style] (IMDEA) at (20mm,0) {Master international} ;
-% 			\only<-9>{\draw[myarrow] (Inge.north) to [out=80, in=100] (IMDEA.north) ; }
-% 			\only<10>{\draw[myarrow, myOrng] (Inge.north) to [out=80, in=100] (IMDEA.north) ; }
-% 			}
-% 			\visible<3->{
-% 			\node[box_style] (phd) at (0mm,-28mm) {Thèse} ;
-% 			\only<-9>{\draw[myarrow] (IMDEA.south) to [out=-80, in=90] (phd.north) ;}
-% 			\only<10>{\draw[myarrow, myOrng] (IMDEA.south) to [out=-80, in=90] (phd.north) ;}
-% 			}
-% 			\visible<8->{
-% 			\node[box_style, text width=21mm] (postdoc) at (0mm,-40mm) {{4 ans recherche\\\vspace{-1mm}post-doctorale}} ;
-% 			\only<-9>{\draw[myarrow] (phd.south) -- (postdoc.north) ;}
-% 			\only<10>{\draw[myarrow, myOrng] (phd.south) -- (postdoc.north) ;}
-% 			}
-% 			\visible<9->{
-% 			\node (OC) at (0mm,-55mm) {\includegraphics[width=8mm]{Logo_OpenClassrooms.png}} ;
-% 			}
-% 		\end{scope}
-% 		}
+\begin{frame}[t]
+	\vspace{2mm}
+	\begin{tikzpicture}
+		\draw[black] (-0.5\textwidth,-0.8\textheight) rectangle (0.5\textwidth,0.25\textheight) ;
+		\only<-10>{
+		\begin{scope}[xshift=10mm]
+			\node[box_style, text=myOrng] (Inge) at (-20mm,0) {{Diplôme ingénieur}} ;
+			\visible<2->{
+			\node[box_style, text=myOrng] (IMDEA) at (20mm,0) {Master international} ;
+			\only<-9>{\draw[myarrow] (Inge.north) to [out=80, in=100] (IMDEA.north) ; }
+			\only<10>{\draw[myarrow, myOrng] (Inge.north) to [out=80, in=100] (IMDEA.north) ; }
+			}
+			\visible<3->{
+			\node[box_style, text=myOrng] (phd) at (0mm,-28mm) {Thèse} ;
+			\only<-9>{\draw[myarrow] (IMDEA.south) to [out=-80, in=90] (phd.north) ;}
+			\only<10>{\draw[myarrow, myOrng] (IMDEA.south) to [out=-80, in=90] (phd.north) ;}
+			}
+			\visible<8->{
+			\node[box_style, text=myOrng, text width=21mm] (postdoc) at (0mm,-40mm) {{4 ans recherche\\\vspace{-1mm}post-doctorale}} ;
+			\only<-9>{\draw[myarrow] (phd.south) -- (postdoc.north) ;}
+			\only<10>{\draw[myarrow, myOrng] (phd.south) -- (postdoc.north) ;}
+			}
+			\visible<9->{
+			\node (OC) at (0mm,-55mm) {\includegraphics[width=8mm]{Logo_OpenClassrooms.png}} ;
+			}
+		\end{scope}
+		}
 
-% 		\visible<1-9>{
-% 		\visible<8->{
-% 			\node[draw, rounded corners , anchor=base,text centered, orange, text width=16mm] at (35mm, -32mm) {\color{white}\tiny{Imagerie\\\vspace{-1mm}infra-rouge\\Amortissement\\\vspace{-1mm}vibratoire\\Céramiques\\\vspace{-3mm}électro-caloriques}} ;
-% 			% \node[box_style, text width=20mm] at (30mm, -35mm) {\tiny{Amortissement\\\vspace{-3mm}vibratoire}} ;
-% 		}
+		\visible<1-9>{
+		\visible<8->{
+			\node[draw, rounded corners , anchor=base,text centered, orange, text width=16mm] at (35mm, -32mm) {\color{white}\tiny{Imagerie\\\vspace{-1mm}infra-rouge\\Amortissement\\\vspace{-1mm}vibratoire\\Céramiques\\\vspace{-3mm}électro-caloriques}} ;
+			% \node[box_style, text width=20mm] at (30mm, -35mm) {\tiny{Amortissement\\\vspace{-3mm}vibratoire}} ;
+		}
 
-% 		\visible<9->{
-% 			\node at (25mm, -55mm) {\includegraphics[width=15mm]{divers/Machine-Learning.pdf}} ;
-% 		}
+		\visible<9->{
+			% \node at (25mm, -55mm) {\includegraphics[width=15mm]{divers/Machine-Learning.pdf}} ;
+			\node[violetOC,anchor=center, font=\bfseries, text width=30mm] at (33mm, -55mm) {{MACHINE\\LEARNING}} ;
+		}
 
-% 		\visible<6>{
-% 			\node at (-22mm,-35mm) {
-% 			\def\arraystretch{0.1}%  1 is the default, change whatever you need
-% 				\begin{tabular}{cc}
-% 					{\includegraphics[width=27mm]{Plate/DS_n/1.pdf}}%
-% 					&
-% 					{\includegraphics[width=27mm]{Plate/DS_n/3.pdf}}%
-% 					\tabularnewline
-% 					{\includegraphics[width=27mm]{Plate/DS_n/5.pdf}}%
-% 					&
-% 					{\includegraphics[width=27mm]{Plate/DS_n/8.pdf}}%
-% 				\end{tabular}
-% 			} ;
-% 		}
-% 		\visible<5>{
-% 			\node at (-20mm, -50mm) {\includegraphics[width=60mm]{Plate/estimated_FRF.pdf}} ;
-% 		}
-% 		\visible<4>{
-% 		\node at (-20mm,-33mm) {
-% 			\movie[width=35mm]{\includegraphics[width=35mm]{Plate/Movie_plate.pdf}}{Movie_plate.mp4}
-% 		};
-% 		}
-% 		\visible<3,7->{
-% 			\node at (-25mm, -35mm) { \includegraphics[width=55mm]{triangulation.pdf} } ;
-% 		}
+		\visible<6>{
+			\node at (-22mm,-35mm) {
+			\def\arraystretch{0.1}%  1 is the default, change whatever you need
+				\begin{tabular}{cc}
+					{\includegraphics[width=27mm]{Plate/DS_n/1.pdf}}%
+					&
+					{\includegraphics[width=27mm]{Plate/DS_n/3.pdf}}%
+					\tabularnewline
+					{\includegraphics[width=27mm]{Plate/DS_n/5.pdf}}%
+					&
+					{\includegraphics[width=27mm]{Plate/DS_n/8.pdf}}%
+				\end{tabular}
+			} ;
+		}
+		\visible<5>{
+			\node at (-25mm, -40mm) {\includegraphics[width=60mm]{Plate/estimated_FRF.pdf}} ;
+		}
+		\visible<4>{
+		\node at (-20mm,-33mm) {
+			\movie[width=35mm]{\includegraphics[width=35mm]{Plate/Movie_plate.pdf}}{Movie_plate.mp4}
+		};
+		}
+		\visible<3,7->{
+			\node at (-25mm, -35mm) { \includegraphics[width=55mm]{triangulation.pdf} } ;
+		}
 	
-% 		\node at (-30mm, 13mm) { \movie[loop,width=30mm]{\includegraphics[width=30mm]{vib/Mass_Spring_dark-0.png}}{mass_spring.mp4} } ;
-% 		\visible<2->{
-% 			\node at (40mm,-12.5mm) {\includegraphics[width=15mm]{electroac/loudspeaker.pdf}} ;
-% 		}
+		\node at (-30mm, 13mm) { \movie[loop,width=30mm]{\includegraphics[width=30mm]{vib/Mass_Spring_dark-0.png}}{mass_spring.mp4} } ;
+		\visible<2->{
+			\node at (40mm,-12.5mm) {\includegraphics[width=15mm]{electroac/loudspeaker.pdf}} ;
+		}
 
-% 	}
-% 	\end{tikzpicture}
-% \end{frame}
+	}
+	\end{tikzpicture}
+\end{frame}
 
-% % \begin{frame}
-% % 	\begin{overlayarea}{\textwidth}{\textheight}
-
-% % 		\vspace{6mm}
-% % 	\shdd{Parcours}
-% % 	\begin{itemize}
-% % 		\item[\shdng{0}{1}{2-}{$\bullet$}] \shdng{0}{1}{2-}{Ingénieur spécialisé Vibro-acoustique}
-% % 		\item[\shdng{-1}{2}{3-}{$\bullet$}] \shdng{-1}{2}{3-}{Master internationnal en Électro-Acoustique}
-% % 		\item[\shdng{-2}{3-7}{8-}{$\bullet$}] \shdng{-2}{3-7}{8-}{Doctorat~: mesure de vibrations par vision 3D}
-% % 		\item<8->[\shdng{-7}{8-}{0}{$\bullet$}] Recherche post-doctoral (4 ans)~:
-% % 		\only<9->{
-% % 		\begin{itemize}
-% % 			\item[$\bullet$] Imagerie infra-rouge appliqué à la dissipation vibratoire
-% % 			\item[$\bullet$] Création de modèles~: mécanique \& thermique (et couplage des 2)
-% % 			\item[$\bullet$] Étude de vibrations de céramiques
-% % 		\end{itemize}}
-% % 		\item<10>[$\bullet$] Recherche personnelle~?
-% % 	\end{itemize}
-
-% % 	\only<1>{
-% % 		\vspace*{-30mm}
-% % 		\hspace*{60mm}
-% % 		\movie[loop,width=40mm]{\includegraphics[width=40mm]{vib/Mass_Spring_dark-0.png}}{mass_spring.mp4}
-% % 	}
-
-% % 	\only<2>{
-% % 		\vspace*{-25mm}
-% % 		\hspace*{70mm}
-% % 		\includegraphics[width=20mm]{electroac/loudspeaker.pdf}
-% % 	}
-
-% % 	\vspace{3mm}
-% % 	\only<-3>{
-% % 		\visible<3>{
-% % 			\centering
-% % 			\includegraphics[width=70mm]{triangulation.pdf}
-% % 		}
-% % 	}
-% % 	\only<4>{
-% % 	\begin{figure}
-% % 		\centering
-% % 		\movie[width=70mm]{\includegraphics[width=70mm]{Plate/Movie_plate.pdf}}{Movie_plate.mp4}
-% % 	\end{figure}
-% %     }
-% % 	\only<5>{
-% % 		\centering
-% % 		\shdd{Estimation pour 1 point}\\
-% % 		\includegraphics[width=80mm]{Plate/estimated_FRF.pdf}
-% % 	}
-% % 	\only<6-7>{
-% % 		\centering
-% % 		\shdd{Estimation par mode}
-% % 		\begin{tabular}{cc}
-% % 			\only<6>{\includegraphics[width=60mm]{Plate/DS_n/1.pdf}}%
-% % 			\only<7>{\includegraphics[width=60mm]{Plate/DS_n/5.pdf}}%
-% % 			&
-% % 			\only<6>{\includegraphics[width=60mm]{Plate/DS_n/3.pdf}}%
-% % 			\only<7>{\includegraphics[width=60mm]{Plate/DS_n/8.pdf}}%
-% % 		\end{tabular}
-% % 	}
-
-% % 	\end{overlayarea}
-% % \end{frame}
 
 \section{{\alert{Pourquoi} une nouvelle formation~?\\Dans \alert{quel but}~?}}
 
-% \begin{frame}[t]
-% 	\vspace{0mm}
-% 	\begin{tikzpicture}
-% 		\draw[white] (0,0) rectangle (\textwidth,\textheight) ;
-% 		\only<1-5>{
-% 			\node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\fontsize{100pt}{20pt}\selectfont ?} ;
-% 			\node at (0.495\textwidth, 0.38\textheight) {\includegraphics[width=6mm]{Logo_OpenClassrooms.png}} ;
-% 		}
-% 		\only<6>{
-% 			\node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\includegraphics[width=10mm]{Logo_OpenClassrooms.png}} ;
-% 			\node[box_style0, text width=30mm] at (0.5\textwidth,0.2\textheight) {{Création micro-entreprise (freelance)}} ;
-% 		}
-% 		\visible<2->{
-% 			\node[box_style0, text width=30mm] at (0.5\textwidth,0.8\textheight) {Plaisir d'\alert{apprendre}} ;
-% 			\node[anchor=center] at (0.75\textwidth,0.8\textheight) {\includegraphics[height=16mm]{divers/brain.pdf}} ;
-% 		}
-% 		\visible<3->{
-% 			\node[box_style0, text width=30mm] at (0.2\textwidth,0.5\textheight) {Élargir mon champs de \alert{compétences}} ;
-% 			\node[anchor=center] at (0.12\textwidth,0.35\textheight) {\includegraphics[width=15mm]{divers/magnetfeld_einer_spule_02.pdf}} ;
-% 		}
-% 		\visible<4->{
-% 			\node[anchor=center] at (0.3\textwidth,0.35\textheight) {\includegraphics[width=15mm]{divers/Prismatic-Cloud-Gears-2.pdf}} ;
-% 		}
-% 		\visible<5->{
-% 			\node[box_style0, text width=30mm] at (0.8\textwidth,0.5\textheight) {{Accéder à\\\vspace{0mm}de nouvelles \alert{opportunités}}} ;
-% 			\node[anchor=center] at (0.8\textwidth,0.35\textheight) { \color{red} image ? } ;
-% 		}
-% 	\end{tikzpicture}
-% \end{frame}
+\begin{frame}[t]
+	\vspace{0mm}
+	\begin{tikzpicture}
+		\draw[black] (0,0) rectangle (\textwidth,\textheight) ;
+		\only<1-4>{
+			\node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\fontfamily{qcr}\fontsize{100pt}{20pt}\selectfont \color{myOrng}?} ;
+			\node at (0.5\textwidth, 0.4\textheight) {\includegraphics[width=6mm]{Logo_OpenClassrooms.png}} ;
+			% \node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\fontfamily{lmtt}\fontsize{100pt}{20pt}\selectfont \color{myOrng}?} ;
+			% \node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\fontfamily{phv}\fontsize{100pt}{20pt}\selectfont \color{myOrng}?} ;
+			% \node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\fontfamily{qhv}\fontsize{100pt}{20pt}\selectfont \color{myOrng}?} ;
+			% \node at (0.495\textwidth, 0.38\textheight) {\includegraphics[width=6mm]{Logo_OpenClassrooms.png}} ;
+		}
+		\only<5>{
+			\node[anchor=center] at (0.5\textwidth, 0.5\textheight) {\includegraphics[width=10mm]{Logo_OpenClassrooms.png}} ;
+			\node[box_style0, text width=30mm] at (0.5\textwidth,0.2\textheight) {{\color{myOrng}Création\\micro-entreprise\\(freelance)}} ;
+		}
+		\visible<2->{
+			\node[box_style0, text width=30mm] at (0.5\textwidth,0.8\textheight) {Plaisir d'\alert{apprendre}} ;
+			\node[anchor=center] at (0.75\textwidth,0.8\textheight) {\includegraphics[height=16mm]{divers/brain.pdf}} ;
+		}
+		\visible<3->{
+			\node[box_style0, text width=30mm] at (0.2\textwidth,0.5\textheight) {Élargir mon champ de \alert{compétences}} ;
+			% \node[anchor=center] at (0.12\textwidth,0.35\textheight) {\includegraphics[width=15mm]{divers/magnetfeld_einer_spule_02.pdf}} ;
+			\node[anchor=center] at (0.2\textwidth,0.35\textheight) {\includegraphics[width=15mm]{divers/Prismatic-Cloud-Gears-2.pdf}} ;
+		}
+		\visible<4->{
+			\node[box_style0, text width=30mm] at (0.8\textwidth,0.5\textheight) {{Accéder à\\\vspace{0mm}de nouvelles \alert{opportunités}}} ;
+			\node[anchor=center] at (0.8\textwidth,0.35\textheight) { \color{red} image ? } ;
+		}
+	\end{tikzpicture}
+\end{frame}
 
 
 
@@ -256,9 +196,9 @@
 \begin{frame}[t]
 	\vspace{0mm}
 	\begin{tikzpicture}
-		\draw[white] (0,0) rectangle (\textwidth,\textheight) ;
+		\draw[black] (0,0) rectangle (\textwidth,\textheight) ;
 		\begin{scope}[xshift=0.5\textwidth, yshift=0.5\textheight]
-			\node[anchor=center] at (0, 0) {\includegraphics[width=10mm]{Logo_OpenClassrooms.png}} ;
+			\node[anchor=center] at (0, 0) {\includegraphics[width=15mm]{Logo_OpenClassrooms.png}} ;
 			
 			\draw (90:\Rfive) node (E1) {} ;
 			\draw (90-360/5:\Rfive) node (E2) {} ; 
@@ -267,34 +207,35 @@
 			\draw (90-4*360/5:\Rfive) node (E5) {} ; 
 
 			
-			\visible<2->{\draw[myarrow] (E1.center) arc (90:90-50:\Rfive ) ;}
-			\visible<3->{\draw[myarrow] (E2.center) arc (90-360/5:90-360/5-50:\Rfive ) ;}
-			\visible<4->{\draw[myarrow] (E3.center) arc (90-2*360/5:90-2*360/5-50:\Rfive ) ;}
-			\visible<5->{\draw[myarrow] (E4.center) arc (90-3*360/5:90-3*360/5-50:\Rfive ) ;}
-			\visible<6->{\draw[myarrow] (E5.center) arc (90-4*360/5:90-4*360/5-50:\Rfive ) ;}
-			
-			\filldraw[fill=clrE1,clrE1] (E1.center) circle (\RelemFive) ;
-			\node[circle_Five, text=black] at (E1.center) {Reconnue} ; 
-			
+			\visible<3->{\draw[myarrow] (E1.center) arc (90:90-52:\Rfive ) ;}
+			\visible<4->{\draw[myarrow] (E2.center) arc (90-360/5:90-360/5-52:\Rfive ) ;}
+			\visible<5->{\draw[myarrow] (E3.center) arc (90-2*360/5:90-2*360/5-52:\Rfive ) ;}
+			\visible<6->{\draw[myarrow] (E4.center) arc (90-3*360/5:90-3*360/5-52:\Rfive ) ;}
+			\visible<7->{\draw[myarrow] (E5.center) arc (90-4*360/5:90-4*360/5-52:\Rfive ) ;}
 			
 			\visible<2->{
-			\filldraw[fill=clrE2,clrE2] (E2.center) circle (\RelemFive) ;
-			\node[circle_Five, text=black] at (E2.center) {{Mentorat 45~mins/sem.}} ; 
+			\filldraw[fill=clrE1,clrE1] (E1.center) circle (\RelemFive) ;
+			\node[circle_Five, text=black, text width=30mm] at (E1.center) {{Formations\\reconnues}} ; 
 			}
 			
 			\visible<3->{
+			\filldraw[fill=clrE2,clrE2] (E2.center) circle (\RelemFive) ;
+			\node[circle_Five, text=black] at (E2.center) {{Mentorat 45~min/sem.}} ; 
+			}
+			
+			\visible<4->{
 			\filldraw[fill=clrE3,clrE3] (E3.center) circle (\RelemFive) ;
-			\node[circle_Five,text=black] at (E3.center) {Accès à une commaunauté} ; 
+			\node[circle_Five,text=black] at (E3.center) {Accès à une communauté} ; 
 			\node at (35mm,-35mm) {\includegraphics[width=20mm]{Slack_logo_white.pdf}} ; 
 			}
 
-			\visible<4->{
+			\visible<5->{
 			\filldraw[fill=clrE4,clrE4] (E4.center) circle (\RelemFive) ;
 			\node[circle_Five,text=black] at (E4.center) {En distanciel} ;
 			\node at (-40mm,-30mm) {\includegraphics[width=20mm]{divers/icon-computer.pdf}} ; 
 			}
 			
-			\visible<5->{
+			\visible<6->{
 				\filldraw[fill=clrE5,clrE5] (E5.center) circle (\RelemFive) ;
 				\node[circle_Five,text=black] at (E5.center) {{Apprentissage par projets}} ; 
 				\node at (-40mm,30mm) {\includegraphics[width=20mm]{divers/project-time.pdf}} ; 
@@ -303,81 +244,209 @@
 	\end{tikzpicture}
 \end{frame}
 
-\begin{frame}[t]
-	\vspace{18mm}
 
-	\shdd{Une formation OpenClassrooms c'est~:}
-	\begin{itemize}
-		\item[\shdng{0}{1}{2-}{$\bullet$}] \shdng{0}{1}{2-}{45 minutes / semaine de mentorat avec un professionnel}
-		\item[\shdng{-1}{2}{3-}{$\bullet$}] \shdng{-1}{2}{3-}{En distanciel (souplesse)}
-		\item[\shdng{-2}{3}{4-}{$\bullet$}] \shdng{-2}{3}{4-}{Un accès à une communauté}
-		\item[\shdng{-3}{4}{0}{$\bullet$}] \shdng{-3}{4}{0}{Un apprentissage par \only<4>{\alert{projets}}}
-	\end{itemize}
-
-	\visible<2->{
-		\vspace*{-18mm}
-		\hspace*{77mm}
-		\includegraphics[width=20mm]{divers/icon-computer.pdf}
-	}
-
-	\visible<3->{
-	\vspace*{-12mm}
-	\hspace*{45mm}
-	\begin{tikzpicture}
-		\only<3>{\node {\includegraphics[width=20mm]{Slack_logo_white.pdf}} ; }
-        \only<4->{\node[opacity=0.5] {\includegraphics[width=20mm]{Slack_logo_white.pdf}};}%
-    \end{tikzpicture}
-	}
-
-	\vspace{3mm}
-	\begin{center}
-		\only<4>{\hspace{0mm} \includegraphics[width=25mm]{divers/project-time.pdf}}
-	\end{center}
-
-	
-	
-\end{frame}
+\section{Les projets}
 
 \begin{frame}[t]
 	\vspace{0mm}
 	\begin{tikzpicture}
-		\draw[black] (0,0) rectangle (\textwidth,\textheight) ; 
-		\node[box_style0, text width=30mm] at (0.2\textwidth, 0.8\textheight) {{\alert{Mentorat}\\\vspace{-1mm}45mins / semaine}} ;
-		\node[red] at (0.6\textwidth,0.5\textheight) {image Professionnel ?} ;
-
-		\visible<2->{
-		\node[box_style0, text width=30mm] at (0.2\textwidth, 0.7\textheight) {{En \alert{distanciel}\\\vspace{-1mm}}(souplesse)} ;
-		\node at (0.6\textwidth, 0.75\textheight) { \includegraphics[width=20mm]{divers/icon-computer.pdf} } ;
-		}
-
-		\visible<3->{
-		\node[box_style0, text width=30mm] at (0.2\textwidth, 0.6\textheight) {{Accès à\\\vspace{-1mm}}une \alert{communauté}} ;
-		\node at (0.6\textwidth, 0.6\textheight) { \includegraphics[width=20mm]{Slack_logo_white.pdf} } ;
-		}
+		\draw[black] (0,0) rectangle (\textwidth,\textheight) ;
 		
-		\visible<4->{
-		\node[box_style0, text width=30mm] at (0.2\textwidth, 0.5\textheight) {{Apprentissage\\\vspace{-1mm}}par \alert{projets}} ;
-		\node at (0.6\textwidth, 0.3\textheight) { \includegraphics[width=25mm]{divers/project-time.pdf} } ;
+		\node at (0.5\textwidth-40mm,0.5\textheight+30mm) {\includegraphics[width=20mm]{divers/project-time.pdf}} ; 
+		\node at (0.5\textwidth,0.9\textheight) {\large \color{myOrng} \textbf{Projets}} ;
+		
+		\visible<3->{\filldraw[black!75, rounded corners] ( 0.2875\textwidth, 0.06\textwidth ) rectangle (0.7125\textwidth,0.85\textheight) ;}
+
+		\only<2>{\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.65\textheight) {1} ;}
+		\only<3-4>{
+			\node[box_style0, myOrng, fill=black!75, font=\bfseries, text width=0.2\textwidth] at (0.15\textwidth,0.65\textheight) {1} ;
+			\node[text width=0.4\textwidth, text centered, font=\bfseries] at (0.5\textwidth,0.78\textheight) {{Concevez une application\\au service de la santé publique}} ;
+			\node[text width=0.41\textwidth, anchor=north west] at (0.27\textwidth,0.75\textheight) {
+				\begin{itemize}
+					\item[$\bullet$] \alert{Gestion} de \alert{données} incomplètes
+					\item[$\bullet$] \alert{Analyse statistique} uni/multivariée
+					\item[$\bullet$] \alert{Communication} sur les résultats
+					% \item[$\bullet$] motivation : prise en main / découverte
+				\end{itemize}
+			} ;
 		}
-	\end{tikzpicture}	
-	
+
+		
+		\only<2-4>{\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.56\textheight) {2} ;}
+		\only<5-6>{
+			\node[box_style0, myOrng, fill=black!75, font=\bfseries, text width=0.2\textwidth] at (0.15\textwidth,0.56\textheight) {2} ;
+			\node[text width=0.4\textwidth, text centered, font=\bfseries] at (0.5\textwidth,0.78\textheight) {{Anticipez les besoins\\en consommation de bâtiments}} ;
+			\node[text width=0.41\textwidth, anchor=north west] at (0.27\textwidth,0.75\textheight) {
+				\begin{itemize}
+					\item[$\bullet$] Mettre en place un \alert{modèle} d'apprentissage \alert{supervisé}
+					\item[$\bullet$] \alert{Transformer} les \alert{variables} pertinentes
+					\item[$\bullet$] \alert{Adapter} les hyperparamètres
+					\item[$\bullet$] \alert{Évaluer} les \alert{performances} du modèle
+				\end{itemize}
+			} ;
+		}
+
+
+		\only<2-6>{\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.47\textheight) {3} ;}
+		\only<7-8>{
+			\node[box_style0, myOrng, fill=black!75, font=\bfseries, text width=0.2\textwidth] at (0.15\textwidth,0.47\textheight) {3} ;
+			\node[text width=0.4\textwidth, text centered, font=\bfseries] at (0.5\textwidth,0.78\textheight) {{Segmentez des clients\\d'un site e-commerce}} ;
+			\node[text width=0.41\textwidth, anchor=north west] at (0.27\textwidth,0.75\textheight) {
+				\begin{itemize}
+					\item[$\bullet$] Mettre en place un \alert{modèle} d'apprentissage \alert{non-supervisé}
+					\item[$\bullet$] \alert{Transformer} les \alert{variables} pertinentes
+					\item[$\bullet$] \alert{Adapter} les hyperparamètres
+					\item[$\bullet$] \alert{Évaluer} les \alert{performances} du modèle
+				\end{itemize}
+			} ;
+		}
+
+		\only<2-8>{\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.38\textheight) {4} ;}
+		\only<9-10>{
+			\node[box_style0, myOrng, fill=black!75, font=\bfseries, text width=0.2\textwidth] at (0.15\textwidth,0.38\textheight) {4} ;
+			\node[text width=0.4\textwidth, text centered, font=\bfseries] at (0.5\textwidth,0.78\textheight) {{Catégorisez automatiquement\\des questions}} ;
+			\node[text width=0.41\textwidth, anchor=north west] at (0.27\textwidth,0.75\textheight) {
+				\begin{itemize}
+					\item[$\bullet$] \alert{Gestion} de \alert{données} à grandes dimensions
+					\item[$\bullet$] \alert{Prétraiter} des \alert{données non structurées}
+					\item[$\bullet$] Mettre en \oe{}uvre des techniques de \alert{réduction de dimension}
+					\item[$\bullet$] Mettre en \oe{}uvre des techniques d'\alert{extraction de features} pour des données non structurée
+				\end{itemize}
+			} ;
+		}
+
+		\only<2-10>{\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.29\textheight) {5} ;}
+		\only<11-12>{
+			\node[box_style0, myOrng, fill=black!75, font=\bfseries, text width=0.2\textwidth] at (0.15\textwidth,0.29\textheight) {5} ;
+			\node[text width=0.4\textwidth, text centered, font=\bfseries] at (0.5\textwidth,0.78\textheight) {{Classez des images à l'aide\\d'algorithmes de Deep Learning}} ;
+			\node[text width=0.41\textwidth, anchor=north west] at (0.27\textwidth,0.75\textheight) {
+				\begin{itemize}
+					\item[$\bullet$] Mettre en place un \alert{modèle} de \alert{Deep Learning}
+					\item[$\bullet$] \alert{Sélectionner} un modèle d'apprentissage \alert{adapté}
+					\item[$\bullet$] \alert{Transformer} les \alert{variables} pertinentes
+					\item[$\bullet$] \alert{Évaluer} les \alert{performances} du modèle
+				\end{itemize}
+			} ;
+		}
+
+		\only<2-12>{\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.20\textheight) {6} ;}
+		\only<13-14>{
+			\node[box_style0, myOrng, fill=black!75, font=\bfseries, text width=0.2\textwidth] at (0.15\textwidth,0.20\textheight) {6} ;
+			\node[text width=0.4\textwidth, text centered, font=\bfseries] at (0.5\textwidth,0.78\textheight) {{Développez une preuve de concept}} ;
+			\node[text width=0.41\textwidth, anchor=north west] at (0.27\textwidth,0.75\textheight) {
+				\begin{itemize}
+					\item[$\bullet$] \alert{Réaliser} une \alert{veille} sur les évolutions de la \alert{Data Science}
+					\item[$\bullet$] \alert{Développer} une preuve de concepte
+					\item[$\bullet$] \alert{Identifier} les méthode de l'"\alert{état de l'art}"
+					\item[$\bullet$] \alert{Identifier} les \alert{sources} d'informations \alert{fiables} et \alert{pertinentes}
+				\end{itemize}
+			} ;
+		}
+
+		\only<2-14>{\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.11\textheight) {7} ;}
+		\only<15-16>{
+			\node[box_style0, myOrng, fill=black!75, font=\bfseries, text width=0.2\textwidth] at (0.15\textwidth,0.11\textheight) {7} ;
+			\node[text width=0.4\textwidth, text centered, font=\bfseries] at (0.5\textwidth,0.78\textheight) {{Participez à une\\compétition Kaggle~!}} ;
+			\node[text width=0.41\textwidth, anchor=north west] at (0.27\textwidth,0.75\textheight) {
+				\begin{itemize}
+					\item[$\bullet$] \alert{Présenter} son code aux standards \alert{PEP 8}
+					\item[$\bullet$] \alert{Gérer} les \alert{versions de code}% pour assurer l'\alert{intégration du modèle}
+					\item[$\bullet$] \alert{Rédiger} une \alert{note méthodologique}% afin de communiquer sa démarche de modélisation
+					\item[$\bullet$] \alert{Enrichir} les \alert{réalisations} d'autres membres de la \alert{communauté} de professionnels
+				\end{itemize}
+			} ;
+		}
+
+		% Anticipez les besoins en consommation de bâtiments
+		% Évaluer les performances d'un modèle d'apprentissage supervisé
+		% Transformer les variables pertinentes d'un modèle d'apprentissage supervisé
+		% Adapter les hyperparamètres d'un algorithme d'apprentissage supervisé afin de l'améliorer
+		% Mettre en place le modèle d'apprentissage supervisé adapté au problème métier
+
+		% Segmentez des clients d'un site e-commerce
+		% Mettre en place le modèle d'apprentissage non supervisé adapté au problème métier
+		% Transformer les variables pertinentes d'un modèle d'apprentissage non supervisé
+		% Évaluer les performances d'un modèle d'apprentissage non supervisé
+		% Adapter les hyperparamètres d'un algorithme non supervisé afin de l'améliorer
+
+		% Catégorisez automatiquement des questions
+		% Représenter graphiquement des données à grandes dimensions
+		% Prétraiter des données non structurées pour obtenir un jeu de données exploitable
+		% Mettre en œuvre des techniques de réduction de dimension
+		% Mettre en œuvre des techniques d'extraction de features pour des données non structurées
+
+		% Classez des images à l'aide d'algorithmes de Deep Learning
+		% Transformer les variables pertinentes d'un modèle de Deep Learning
+		% Adapter les paramètres d'un modèle de Deep Learning afin de l'améliorer
+		% Mettre en place un modèle de Deep Learning
+		% Sélectionner un modèle d'apprentissage Deep Learning adapté à une problèmatique métier
+		% Évaluer les performances d'un modèle de Deep Learning
+
+		% Développez une preuve de concept (PoC)
+		% Réaliser une veille sur les évolutions de la Data Science
+		% Développer une preuve de concept pour résoudre un problème de Data science
+		% Identifier les méthodes "état de l'art" pour résoudre un problème de Data science
+		% Identifier des sources d'informations fiables et pertinentes
+
+		% Participez à une compétition Kaggle !
+		% Présenter son code aux standards PEP 8
+		% Utiliser un logiciel de version de code pour assurer l'intégration du modèle
+		% Rédiger une note méthodologique afin de communiquer sa démarche de modélisation
+		% Enrichir les réalisations d'autres membres de la communauté de professionnels
+
+		\visible<4->{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.9\textheight) {Santé} ;}
+		\visible<6->{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.8\textheight) {Énergie} ;}
+		\visible<8->{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.7\textheight) {Segmenter} ;}
+		\visible<10->{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.6\textheight) {Catégoriser} ;}
+		\visible<12->{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.5\textheight) {Classer/images} ;}
+		\visible<14->{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.4\textheight) {PoC} ;}
+		\visible<16->{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.3\textheight) {Kaggle} ;}
+
+
+	\end{tikzpicture}
 \end{frame}
 
 
-\section{Les projets}
+\begin{frame}[t]
+	\vspace{0mm}
+	\begin{tikzpicture}
+		\draw[black] (0,0) rectangle (\textwidth,\textheight) ;
+		
+		\node at (0.5\textwidth-40mm,0.5\textheight+30mm) {\includegraphics[width=20mm]{divers/project-time.pdf}} ; 
+		\node at (0.5\textwidth,0.9\textheight) {\large \color{myOrng} \textbf{Projets}} ;
+		
+		\node at (0.15\textwidth,0.65\textheight) { IMAGE MOTIVANT} ;
+		\node at (0.5\textwidth,0.65\textheight) { IMAGE DIFFICILE} ;
 
-% \begin{frame}
-% 	\shdd{Les projets~:}
-% 	\begin{itemize}
-% 		\item[\shdng{0}{1}{2-}{1.}] \shdng{0}{1}{2-}{Concevez une application au service de la santé publique\newline(Gestion de données incomplètes)}
-% 		\item[\shdng{-1}{2}{3-}{2.}] \shdng{-1}{2}{3-}{Anticipez les besoins en consommation de bâtiments\newline(Modèle d'apprentissage supervisé)}
-% 		\item[\shdng{-2}{3}{4-}{3.}] \shdng{-2}{3}{4-}{Segmentez des clients d'un site e-commerce\newline(Modèle d'apprentissage non supervisé)}
-% 		\item[\shdng{-3}{4}{5-}{4.}] \shdng{-3}{4}{5-}{Catégorisez automatiquement des questions\newline(Gestion de données non structurées \& extraction de features)}
-% 		\item[\shdng{-4}{5}{6-}{5.}] \shdng{-4}{5}{6-}{Classez des images à l'aide d'algorithmes de Deep Learning\newline(Gestion d'images \& Deep Learning)}
-% 		\item[\shdng{-5}{6}{7-}{6.}] \shdng{-5}{6}{7-}{Développez une preuve de concept\newline(Veille technologique \& preuve de concept)}
-% 		\item[\shdng{-6}{7}{0}{7.}] \shdng{-6}{7}{0}{Participez à une compétition Kaggle !\newline(Mise en pratique, gestion \& communication de projet de développement)}
-% 	\end{itemize}
-% \end{frame}
+		\only<1>{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.9\textheight) {Santé} ;
+		\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.8\textheight) {Énergie} ;
+		\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.5\textheight) {Classer/images} ;
+		}
+		\only<2->{\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.5\textheight) {Santé} ;
+		\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.4\textheight) {Énergie} ;
+		\node[box_style0, text width=0.2\textwidth] at (0.15\textwidth,0.3\textheight) {Classer/images} ;
+		}
+
+		\only<1-2>{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.7\textheight) {Segmenter} ;
+		\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.6\textheight) {Catégoriser} ;
+		\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.3\textheight) {Kaggle} ;
+		}
+		\only<3->{\node[box_style0, text width=0.2\textwidth] at (0.5\textwidth,0.5\textheight) {Segmenter} ;
+		\node[box_style0, text width=0.2\textwidth] at (0.5\textwidth,0.4\textheight) {Catégoriser} ;
+		\node[box_style0, text width=0.2\textwidth] at (0.5\textwidth,0.3\textheight) {Kaggle} ;
+		}
+		
+		\only<1-3>{\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.4\textheight) {PoC} ;}
+		\only<4>{
+			\node[box_style0, text width=0.2\textwidth] at (0.85\textwidth,0.5\textheight) {PoC} ;
+			\node[text centered] at (0.85\textwidth,0.65\textheight) { \Huge ? } ;
+		}
+
+	\end{tikzpicture}
+\end{frame}
+
+
+
 
 % \subsection{Les plus motivants}
 % \begin{frame}
@@ -434,109 +503,120 @@
 % 	\end{tabular}
 % \end{frame}
 
-% \subsection{Plannification}
-% \begin{frame}[t]
-% 	\vspace{3mm}
-% 	\shdd{Dates prévisionnelles de soutenances~:}
+\section{Planification}
+\begin{frame}[t]
+	\vspace{6mm}
+	\shdd{Notebook pour estimer les \alert{dates prévisionnelles} de soutenances~:}
 
-% 	\vfill
-% 	\only<1>{\includegraphics[width=110mm]{dates/cell-1.jpg}}%
-% 	% \only<2>{\includegraphics[width=110mm]{dates/cell-1_out.png}}%
-% 	\only<2>{\includegraphics[width=110mm]{dates/cell-2.jpg}}%
-% 	\only<3>{\includegraphics[width=110mm]{dates/cell-3.jpg}}%
-% 	\only<4>{\includegraphics[width=110mm]{dates/cell-4.jpg}}%
-% 	\only<5>{\includegraphics[width=110mm]{dates/cell-5.jpg}}%
-% 	\only<6>{\includegraphics[width=110mm]{dates/cell-6.jpg}}%
-% 	\only<7>{\includegraphics[width=110mm]{dates/cell-7.jpg}}%
-% 	% \only<9>{\includegraphics[width=110mm]{dates/cell-6.png}}%
-% 	% \only<10>{\includegraphics[width=110mm]{dates/cell-6_out.png}}%
-% 	% \only<11>{\includegraphics[width=110mm]{dates/cell-7.png}}%
-% 	\vfill
+	\vfill
+	\only<1>{\includegraphics[width=110mm]{dates/cell-1.jpg}}%
+	% \only<2>{\includegraphics[width=110mm]{dates/cell-1_out.png}}%
+	\only<2>{\includegraphics[width=110mm]{dates/cell-2.jpg}}%
+	\only<3>{\includegraphics[width=110mm]{dates/cell-3.jpg}}%
+	\only<4>{\includegraphics[width=110mm]{dates/cell-4.jpg}}%
+	\only<5>{\includegraphics[width=110mm]{dates/cell-5.jpg}}%
+	\only<6>{\includegraphics[width=110mm]{dates/cell-6.jpg}}%
+	\only<7>{\includegraphics[width=110mm]{dates/cell-7.jpg}}%
+	% \only<9>{\includegraphics[width=110mm]{dates/cell-6.png}}%
+	% \only<10>{\includegraphics[width=110mm]{dates/cell-6_out.png}}%
+	% \only<11>{\includegraphics[width=110mm]{dates/cell-7.png}}%
+	\vfill
 
-% \end{frame}
+\end{frame}
 
 \section{Quelques bonnes pratiques}
 
-% \begin{frame}
-% 	\vspace{0mm}
-% 	\begin{tikzpicture}
-% 		\draw[white] (0,0) rectangle (\textwidth,\textheight) ;
-
-% 		\node[box_style0, text width=40mm] at (0.3\textwidth,0.8\textheight) {{Calendrier\\\vspace{-1mm}dates des jalons}} ;
-% 		\node[draw,red, text width=30mm] at (0.7\textwidth, 0.8\textheight) {{Aide à l'organisation}} ;
-
-% 		\node[box_style0, text width=40mm] at (0.3\textwidth,0.7\textheight) {{Technique POMODORO\\\vspace{0mm}}} ;
-% 		\node[draw,red, text width=30mm] at (0.7\textwidth, 0.7\textheight) {{limiter fatigue\\optimiser efficacité}} ;
+\begin{frame}[t]
+	\vspace{0mm}
+	\begin{tikzpicture}
+		\draw[black] (0,0) rectangle (\textwidth,\textheight) ;
 		
-
-% 		\node[box_style0, text width=40mm] at (0.3\textwidth,0.6\textheight) {{Préparation\\\vspace{-1mm}sessions mentorat} } ;
-% 		\node[draw,red, text width=30mm] at (0.7\textwidth, 0.6\textheight) {{profiter au mieux de l'expérience du mentor}} ;
+		\visible<2->{\node[box_style0, text width=38mm] (A) at (0.7\textwidth, 0.8\textheight) {{Calendrier\\\vspace{-1mm}(dates des jalons)}} ;}
+		\visible<3->{\node[box_style0, text width=38mm] (B) at (0.7\textwidth, 0.6\textheight) {{Technique POMODORO\\\vspace{-1mm}(limite la fatigue)}} ;}
+		\visible<4->{\node[box_style0, text width=38mm] (C) at (0.7\textwidth, 0.4\textheight) {{Préparation\\\vspace{-1mm}sessions mentorat}} ;}
+		\visible<5->{\node[box_style0, text width=38mm] (D) at (0.7\textwidth, 0.2\textheight) {{Éviter de rester bloqué\\\vspace{-1mm}(avancer sur autre chose)}} ;}
 		
+		\only<1-9>{
+			\node at (0.2\textwidth,0.5\textheight) {\includegraphics[width=30mm]{divers/AJ-Buddy-frightened_remix_monsterbrain.pdf}} ;
+			\only<2->{	\draw[myarrow] (0.3\textwidth, 0.6\textheight) -- (A.west) ; }
+			\only<3->{	\draw[myarrow] (0.33\textwidth, 0.52\textheight) -- (B.west) ; }
+			\only<4->{	\draw[myarrow] (0.33\textwidth, 0.48\textheight) -- (C.west) ; }
+			\only<5->{	\draw[myarrow] (0.3\textwidth, 0.4\textheight) -- (D.west) ; }
+		}
 
-% 		\node[box_style0, text width=40mm] at (0.3\textwidth,0.4\textheight) {{Éviter de rester bloqué\\\vspace{-1mm}(focalisé) sur un point} } ;
-% 		\node[draw,red, text width=30mm] at (0.7\textwidth, 0.4\textheight) {{gif robot sur mur ?\\image autre ?}} ;
-
-% 	\end{tikzpicture}
-
-% \end{frame}
-
+		\only<6->{ \node[green, right=of A.east, xshift=-7mm] {\huge \checkmark} ; }
+		\only<7->{ \node[green, right=of B.east, xshift=-7mm] {\huge \checkmark} ; }
+		\only<8->{ \node[green, right=of C.east, xshift=-7mm] {\huge \checkmark} ; }
+		\only<9->{ \node[green, right=of D.east, xshift=-7mm] {\huge \checkmark} ; }
+		
+			
+		\only<10->{
+			\node at (0.2\textwidth,0.2\textheight) {\includegraphics[width=30mm]{divers/Button---Happy.pdf}} ;
+			\node at (0.18\textwidth,0.525\textheight) {\includegraphics[width=30mm]{divers/skotan-Thumbs-up-smiley.pdf}} ;
+			\draw[myarrow, myOrng] (A.west) -- (0.3\textwidth, 0.6\textheight) ;
+			\draw[myarrow, myOrng] (B.west) -- (0.33\textwidth, 0.52\textheight) ;
+			\draw[myarrow, myOrng] (C.west) -- (0.33\textwidth, 0.48\textheight) ;
+			\draw[myarrow, myOrng] (D.west) -- (0.3\textwidth, 0.4\textheight) ;
+		}
+	\end{tikzpicture}
+\end{frame}
 
 
 
 \section{Outils collaboratifs}
 
-% \begin{frame}[t]
-% 	\vspace{0mm}
-% 	\begin{tikzpicture}
-% 		\draw[white] (0,0) rectangle (\textwidth,\textheight) ;
+\begin{frame}[t]
+	\vspace{0mm}
+	\begin{tikzpicture}
+		\draw[black] (0,0) rectangle (\textwidth,\textheight) ;
 
-% 		\node[box_style0] at (0.3\textwidth,0.8\textheight) {GitHub \textcolor{red}{logo~?}} ;
-% 		\visible<1>{
-% 			\node at (0.7\textwidth,0.7\textheight) {\includegraphics[width=0.5\textwidth]{GitHub.png}} ;
-% 		} ;
+		% \node at (0.2\textwidth, 0.7\textheight) {Mentorat ?} ;
 
-% 		\node[box_style0] at (0.3\textwidth,0.7\textheight) {Mails \textcolor{red}{Icone}} ;
+		\node[draw, rounded corners, anchor=north, text centered, text width=30mm] at (0.3\textwidth,0.8\textheight) {\large {Outils de\\\vspace{-1mm}\alert{communication} }} ;
+
+		\node[box_style0, anchor=north] at (0.3\textwidth,0.5\textheight) {GitHub} ;
+		\node[anchor=south] at (0.3\textwidth,0.17\textheight) {\includegraphics[width=0.3\textwidth]{GitHub.png}} ;
+
+		\node[box_style0, anchor=north] at (0.8\textwidth,0.8\textheight) {E-mails} ;
+		\node at (0.8\textwidth,0.8\textheight-12mm) {\includegraphics[height=10mm]{ divers/Email-8.pdf}} ;
 		
-		
-% 		\node[box_style0] at (0.3\textwidth,0.6\textheight) {Plateforme OpenClassrooms} ;
-% 		\node at (0.6\textwidth,0.6\textheight) {\includegraphics[width=10mm]{Logo_OpenClassrooms.png}} ;
-		
-% 		\node[box_style0] at (0.3\textwidth,0.5\textheight) {Discord \textcolor{red}{À mettre ?}} ;
-
-% 	\end{tikzpicture}
-
-% \end{frame}
+		\node[box_style0, text width=30mm, anchor=north] at (0.8\textwidth,0.5\textheight) {{Plateforme\\\vspace{-1mm}OpenClassrooms}} ;
+		\node at (0.8\textwidth,0.5\textheight-18mm) {\includegraphics[width=10mm]{Logo_OpenClassrooms.png	}} ;
+	
+	\end{tikzpicture}
+\end{frame}
 
 
 
+\begin{frame}[t]
+	\vspace{18mm}
+	\begin{center}
+		\Large \alert{Merci} pour votre \alert{attention}.
+	\end{center}
 
-% \begin{frame}[t]
-% 	\vspace{18mm}
-% 	\begin{center}
-% 		\Large Merci pour votre attention.
-% 	\end{center}
+  {\Huge METTRE A JOUR REFERENCES} 
 
-% 	\vfill
-% 	{\tiny
-% 	\begin{center}
-% 		\alert{Artworks}\\ \vspace{-2mm}
-% 		\alert{\rule{40mm}{0.1mm}}
-% 	\end{center}
+	\vfill
+	{\tiny
+	\begin{center}
+		\alert{Artworks}\\ \vspace{-2mm}
+		\alert{\rule{40mm}{0.1mm}}
+	\end{center}
 
-% 	commons.wikimedia~: 
-% 	\begin{itemize}
-% 		\item[$\bullet$] Mass Spring System Resonance.gif by Guillermo Bossio 
-% 	\end{itemize}
-% 	openclipart.org~: 
-% 	\begin{itemize}
-% 		\item[$\bullet$] loudspeaker by forestgreen
-% 		\item[$\bullet$] Prismatic Cloud Gears 2, Abstract Brain Triangles Prismatic by GDJ
-% 		\item[$\bullet$] Time Project by lbear
-% 		\item[$\bullet$] Laptop Computer Icon by kael\_179
-% 	\end{itemize}
-% 	}
+	commons.wikimedia~: 
+	\begin{itemize}
+		\item[$\bullet$] Mass Spring System Resonance.gif by Guillermo Bossio 
+	\end{itemize}
+	openclipart.org~: 
+	\begin{itemize}
+		\item[$\bullet$] loudspeaker by forestgreen
+		\item[$\bullet$] Prismatic Cloud Gears 2, Abstract Brain Triangles Prismatic by GDJ
+		\item[$\bullet$] Time Project by lbear
+		\item[$\bullet$] Laptop Computer Icon by kael\_179
+	\end{itemize}
+	}
 
-% \end{frame}
+\end{frame}
 
 
 % ------------------------------------------- %
